--- a/data/cards/14225239.yaml
+++ b/data/cards/14225239.yaml
@@ -25,7 +25,7 @@ text:
     Este monstruo no puede ser Invocado mediante una Invocación Especial excepto mediante una Invocación de Fusión. Si tienes cartas boca abajo en tu Zona de Cartas Mágicas y de Trampa, esta carta puede atacar los Life Points de tu adversario directamente.
   fr: |-
     "Bubbleman, HÉROS Élémentaire" + "Avian, HÉROS Élémentaire"
-    Ce monstre ne peut pas être Invoqué par Invocation Spéciale excepté par une Invocation Fusion. Si vous avez au moins une carte face verso dans votre Zone Carte Magie & Piège, cette carte peut attaquer directement les Life Points de votre adversaire.
+    Uniquement Invocable par Fusion. Tant que vous avez des cartes Posées dans votre Zone Magie & Piège, cette carte peut attaquer directement votre adversaire.
   it: |-
     "Bubbleman EROE Elementale" + "Avian EROE Elementale"
     Deve essere Evocato tramite Fusione e non può essere Evocato Specialmente in altri modi. Mentre hai una o più carte coperta nelle tue Zone Carte Magia & Trappola, questa carta può attaccare il tuo avversario direttamente.
