--- a/data/cards/14166715.yaml
+++ b/data/cards/14166715.yaml
@@ -46,7 +46,7 @@ series:
 - Recipe
 images:
 - index: 1
-  image: RecettedeViande(MeatRecipe)-DBWS-JP-C.png
+  image: RecettedeViande(MeatRecipe)-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN038
@@ -80,6 +80,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 716394
