--- a/data/cards/31241087.yaml
+++ b/data/cards/31241087.yaml
@@ -42,7 +42,7 @@ series:
 - Transcendosaurus
 images:
 - index: 1
-  image: TranscendosaurusMeteorus-DBWS-JP-UR.png
+  image: TranscendosaurusMeteorus-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN002
@@ -76,6 +76,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717200
