--- a/data/cards/40551410.yaml
+++ b/data/cards/40551410.yaml
@@ -38,7 +38,7 @@ series:
 - Recipe
 images:
 - index: 1
-  image: RecettedePersonnel(StaffRecipe)-DBWS-JP-C.png
+  image: RecettedePersonnel(StaffRecipe)-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: WISU-EN039
@@ -72,6 +72,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 716391
