--- a/data/cards/66401502.yaml
+++ b/data/cards/66401502.yaml
@@ -60,7 +60,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulPantera-DBWS-JP-C.png
+  image: VanquishSoulPantera-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN017
@@ -94,6 +94,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806113
