--- a/data/cards/88890658.yaml
+++ b/data/cards/88890658.yaml
@@ -42,7 +42,7 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: BaelgrilldeNouvelles-DBWS-JP-UR.png
+  image: BaelgrilldeNouvelles-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN034
@@ -76,6 +76,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 713421
