--- a/data/cards/05852388.yaml
+++ b/data/cards/05852388.yaml
@@ -40,39 +40,44 @@ atk: 2000
 def: 200
 images:
 - index: 1
-  image: XenoMeteorus-DBWS-JP-SR.png
+  image: XenoMeteorus-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN001
     set_name: Wild Survivors
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: WISU-DE001
     set_name: Wild Survivors
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: WISU-FR001
     set_name: Wild Survivors
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: WISU-IT001
     set_name: Wild Survivors
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: WISU-PT001
     set_name: Wild Survivors
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBWS-JP001
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717531
