--- a/data/cards/15001940.yaml
+++ b/data/cards/15001940.yaml
@@ -42,7 +42,7 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: FoieGlasyadeNouvelles-DBWS-JP-C.png
+  image: FoieGlasyadeNouvelles-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN032
@@ -76,6 +76,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 714994
