--- a/data/cards/15388353.yaml
+++ b/data/cards/15388353.yaml
@@ -38,39 +38,44 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: NouvellesRestaurantAtTable-DBWS-JP-SR.png
+  image: NouvellesRestaurantAtTable-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN035
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: WISU-DE035
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: WISU-FR035
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: WISU-IT035
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: WISU-PT035
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBWS-JP035
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 716062
