--- a/data/cards/26223582.yaml
+++ b/data/cards/26223582.yaml
@@ -42,7 +42,7 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: BuerillabaissedeNouvelles-DBWS-JP-C.png
+  image: BuerillabaissedeNouvelles-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: WISU-EN029
@@ -76,6 +76,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 714177
