--- a/data/cards/27345070.yaml
+++ b/data/cards/27345070.yaml
@@ -37,7 +37,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulContinue-DBWS-JP-C.png
+  image: VanquishSoulContinue-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN025
@@ -71,6 +71,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806108
