--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -67,7 +67,7 @@ atk: 0
 materials: 1 "Vanquish Soul" monster
 images:
 - index: 1
-  image: RockoftheVanquisher-DBWS-JP-C.png
+  image: RockoftheVanquisher-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN022
@@ -101,6 +101,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806111
