--- a/data/cards/29302858.yaml
+++ b/data/cards/29302858.yaml
@@ -60,39 +60,44 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulRazen-DBWS-JP-SR.png
+  image: VanquishSoulRazen-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN016
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: WISU-DE016
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: WISU-FR016
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: WISU-IT016
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: WISU-PT016
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBWS-JP016
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806112
