--- a/data/cards/53330789.yaml
+++ b/data/cards/53330789.yaml
@@ -38,7 +38,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulTrinityBurst-DBWS-JP-SR.png
+  image: VanquishSoulTrinityBurst-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN026
@@ -71,6 +71,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806107
