--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -36,39 +36,44 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: StakeyourSoul-DBWS-JP-SR.png
+  image: StakeyourSoul-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN023
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: WISU-DE023
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: WISU-FR023
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: WISU-IT023
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: WISU-PT023
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBWS-JP023
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806110
