--- a/data/cards/55688914.yaml
+++ b/data/cards/55688914.yaml
@@ -60,7 +60,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulPlutonHG-DBWS-JP-C.png
+  image: VanquishSoulPlutonHG-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN020
@@ -94,6 +94,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806116
