--- a/data/cards/67523044.yaml
+++ b/data/cards/67523044.yaml
@@ -36,7 +36,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: GroundXeno-DBWS-JP-SR.png
+  image: GroundXeno-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN006
@@ -69,6 +69,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 715203
