--- a/data/cards/67745632.yaml
+++ b/data/cards/67745632.yaml
@@ -51,7 +51,7 @@ series:
 - Transcendosaurus
 images:
 - index: 1
-  image: TranscendosaurusGigantozowler-DBWS-JP-SR.png
+  image: TranscendosaurusGigantozowler-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN003
@@ -84,6 +84,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717198
