--- a/data/cards/80738884.yaml
+++ b/data/cards/80738884.yaml
@@ -38,7 +38,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulCalamityCaesar-DBWS-JP-C.png
+  image: VanquishSoulCalamityCaesar-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: WISU-EN027
@@ -72,6 +72,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806106
