--- a/data/cards/87955518.yaml
+++ b/data/cards/87955518.yaml
@@ -38,33 +38,38 @@ series:
 - Recipe
 images:
 - index: 1
-  image: ChefsSpecialRecipe-DBWS-JP-C.png
+  image: ChefsSpecialRecipe-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: WISU-EN040
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: WISU-DE040
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: WISU-FR040
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: WISU-IT040
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: WISU-PT040
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: DBWS-JP040
     set_name: 'Deck Build Pack: Wild Survivors'
@@ -72,6 +77,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 716393
