--- a/data/cards/89016236.yaml
+++ b/data/cards/89016236.yaml
@@ -42,7 +42,7 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: PoeltisdeNouvelles-DBWS-JP-SR.png
+  image: PoeltisdeNouvelles-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN031
@@ -75,6 +75,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 716275
