--- a/data/cards/91073013.yaml
+++ b/data/cards/91073013.yaml
@@ -60,33 +60,38 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulCaesarValius-DBWS-JP-UR.png
+  image: VanquishSoulCaesarValius-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN021
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: WISU-DE021
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: WISU-FR021
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: WISU-IT021
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: WISU-PT021
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBWS-JP021
     set_name: 'Deck Build Pack: Wild Survivors'
@@ -94,6 +99,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717361
