--- a/data/cards/91951471.yaml
+++ b/data/cards/91951471.yaml
@@ -38,7 +38,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulDustDevil-DBWS-JP-C.png
+  image: VanquishSoulDustDevil-WISU-EN-SR-1E.png
 sets:
   en:
   - set_number: WISU-EN024
@@ -72,6 +72,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806109
