--- a/data/cards/92895501.yaml
+++ b/data/cards/92895501.yaml
@@ -60,39 +60,44 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulHeavyBorger-DBWS-JP-SR.png
+  image: VanquishSoulHeavyBorger-WISU-EN-UR-1E.png
 sets:
   en:
   - set_number: WISU-EN018
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: WISU-DE018
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: WISU-FR018
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: WISU-IT018
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: WISU-PT018
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBWS-JP018
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 806114
