--- a/data/cards/93918159.yaml
+++ b/data/cards/93918159.yaml
@@ -36,7 +36,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: Supersoaring-DBWS-JP-C.png
+  image: Supersoaring-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: WISU-EN007
@@ -70,6 +70,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717195
