--- a/data/cards/94130731.yaml
+++ b/data/cards/94130731.yaml
@@ -51,7 +51,7 @@ series:
 - Transcendosaurus
 images:
 - index: 1
-  image: TranscendosaurusGlaciasaurus-DBWS-JP-C.png
+  image: TranscendosaurusGlaciasaurus-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: WISU-EN004
@@ -85,6 +85,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717199
