--- a/data/cards/30243636.yaml
+++ b/data/cards/30243636.yaml
@@ -17,13 +17,13 @@ text:
   en: |-
     You can Ritual Summon this card with "Hamburger Recipe".
   de: |-
-    Dieses Monster kann nur als Ritualbeschwörung beschworen werden, indem du die Ritualzauberkarte „Hamburger-Rezept“ aktivierst. Biete zusätzlich 1 oder mehrere Monster von deiner Hand oder deiner Seite des Spielfelds als Tribut an, die zusammen 6 oder mehr Stufen haben.
+    Du kannst diese Karte mit „Hamburger-Rezept“ als Ritualbeschwörung beschwören.
   es: |-
     Puedes Invocar esta carta por Ritual con "Receta de Hamburguesa".
   fr: |-
-    Ce monstre ne peut être Invoqué que par Invocation Rituelle avec la Carte Magie Rituelle, "Recette de Hamburger". Vous devez également sacrifier des monstres dont le total des Niveaux est égal à 6 ou plus du Terrain ou de votre main.
+    Vous pouvez Invoquer Rituellement cette carte avec "Recette de Hamburger".
   it: |-
-    Questo mostro può essere Evocato solo tramite Evocazione Rituale utilizzando la Carta Magia Rituale "Ricetta dell'Hamburger". Devi anche offrire come Tributo, dal Terreno o dalla tua mano, mostri il cui Livello totale sia 6 o superiore.
+    Puoi Evocare tramite Rituale questa carta con "Ricetta dell'Hamburger".
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com "Receita do Hambúrguer".
   ja: |-
