--- a/data/cards/80280944.yaml
+++ b/data/cards/80280944.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Cannot attack directly. If this card is banished: You can Special Summon this card, and if you do, this card gains 200 ATK for each of your banished Dinosaur monsters. You can only use this effect of "Giant Rex" once per turn.
   de: |-
-    Kann nicht direkt angreifen. Falls diese Karte verbannt wird: Du kannst diese Karte als Spezialbeschwörung beschwören und falls du dies tust, erhält sie für jedes deiner verbannten Dinosaurier-Monster 200 ATK. Du kannst diesen Effekt von „Riesen-Rex“ nur einmal pro Spielzug verwenden.
+    Kann nicht direkt angreifen. Falls diese Karte verbannt wird: Du kannst diese Karte als Spezialbeschwörung beschwören und falls du dies tust, erhält diese Karte für jedes deiner verbannten Dinosaurier-Monster 200 ATK. Du kannst diesen Effekt von „Riesen-Rex“ nur einmal pro Spielzug verwenden.
   es: |-
     No puede atacar directamente. Si esta carta es desterrada: puedes Invocar esta carta de Modo Especial y, si lo haces, esta carta gana 200 ATK por cada uno de tus monstruos Dinosaurio desterrados. Sólo puedes usar este efecto de "Rex Gigante" una vez por turno.
   fr: |-
