--- a/data/cards/98045062.yaml
+++ b/data/cards/98045062.yaml
@@ -20,8 +20,8 @@ text:
     ● Tribute 1 monster, then target 1 face-up monster your opponent controls; take control of that target until the End Phase.
   de: |-
     Aktiviere 1 dieser Effekte.
-    ● Wähle 1 offenes Monster, das dein Gegner kontrolliert; ändere die Kampfposition des gewählten Ziels.
-    ● Biete 1 Monster als Tribut an und wähle dann 1 offenes Monster, das dein Gegner kontrolliert; übernimm bis zur End Phase die Kontrolle über das gewählte Ziel.
+    ● Wähle 1 offenes Monster, das dein Gegner kontrolliert; ändere die Kampfposition jenes gewählten Ziels.
+    ● Biete 1 Monster als Tribut an und wähle dann 1 offenes Monster, das dein Gegner kontrolliert; übernimm bis zur End Phase die Kontrolle über jenes gewählte Ziel.
   es: |-
     Activa 1 de estos efectos.
     ● Selecciona 1 monstruo boca arriba que controle tu adversario; cambia la posición de batalla de ese objetivo.
