--- a/data/cards/13048472.yaml
+++ b/data/cards/13048472.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Add 1 Ritual Spell from your Deck to your hand, and add 1 Ritual Monster from your Deck or GY to your hand whose name is mentioned on that Ritual Spell. You can only activate 1 "Pre-Preparation of Rites" per turn.
   de: |-
-    Füge deiner Hand 1 Ritualzauber von deinem Deck hinzu, und füge deiner Hand 1 Ritualmonster von deinem Deck oder Friedhof hinzu, dessen Name auf dem Ritualzauber aufgeführt ist. Du kannst nur 1 „Vor-Vorbereitung der Riten“ pro Spielzug aktivieren.
+    Füge deiner Hand 1 Ritualzauber von deinem Deck hinzu und füge deiner Hand 1 Ritualmonster, dessen Name auf jenem Ritualzauber erwähnt wird, von deinem Deck oder Friedhof hinzu. Du kannst nur 1 „Vor-Vorbereitung der Riten“ pro Spielzug aktivieren.
   es: |-
-    Añade a tu mano 1 Mágica de Ritual en tu Deck, y añade a tu mano 1 Monstruo de Ritual en tu Deck o Cementerio cuyo nombre sea listado en esa Mágica de Ritual. Sólo puedes activar 1 "Pre-Preparación de Rituales" por turno.
+    Añade a tu mano 1 Mágica de Ritual en tu Deck, y añade a tu mano 1 Monstruo de Ritual en tu Deck o Cementerio cuyo nombre sea mencionado en esa Mágica de Ritual. Sólo puedes activar 1 "Pre-Preparación de Rituales" por turno.
   fr: |-
-    Ajoutez 1 Magie Rituelle depuis votre Deck à votre main, et ajoutez 1 Monstre Rituel dont le nom est listé sur la Magie Rituelle depuis votre Deck ou Cimetière à votre main. Vous ne pouvez activer qu'1 "Pré-Préparation des Rites" par tour.
+    Ajoutez 1 Magie Rituelle depuis votre Deck à votre main, et ajoutez 1 Monstre Rituel dont le nom est mentionné sur la Magie Rituelle depuis votre Deck ou Cimetière à votre main. Vous ne pouvez activer qu'1 "Pré-Préparation des Rites" par tour.
   it: |-
-    Aggiungi 1 Magia Rituale dal tuo Deck alla tua mano, e aggiungi dal tuo Deck o Cimitero alla tua mano 1 Mostro Rituale il cui nome è indicato su quella Magia Rituale. Puoi attivare solo 1 "Pre-Preparazione dei Riti" per turno.
+    Aggiungi 1 Magia Rituale dal tuo Deck alla tua mano, e aggiungi dal tuo Deck o Cimitero alla tua mano 1 Mostro Rituale il cui nome è menzionato su quella Magia Rituale. Puoi attivare solo 1 "Pre-Preparazione dei Riti" per turno.
   pt: |-
-    Adicione 1 Magia de Ritual do seu Deck à sua mão e adicione 1 Monstro de Ritual do seu Deck ou Cemitério à sua mão cujo nome esteja listado nessa Magia de Ritual. Você só pode ativar 1 "Pré-preparação de Ritos" por turno.
+    Adicione 1 Magia de Ritual do seu Deck à sua mão e adicione 1 Monstro de Ritual do seu Deck ou Cemitério à sua mão cujo nome seja mencionado nessa Magia de Ritual. Você só pode ativar 1 "Pré-preparação de Ritos" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキから儀式魔法カード１枚を選び、さらにその儀式魔法カードにカード名が記された儀式モンスター１体を自分のデッキ・墓地から選ぶ。そのカード２枚を手札に加える。
   ko: |-
