--- a/data/cards/81665333.yaml
+++ b/data/cards/81665333.yaml
@@ -8,7 +8,7 @@ name:
   it: Suonare la Ritirata!
   pt:
   ja: <ruby>撤<rt>てっ</rt></ruby><ruby>収<rt>しゅう</rt></ruby><ruby>命<rt>めい</rt></ruby><ruby>令<rt>れい</rt></ruby>
-  ja_romaji: Tesshū Meirei
+  ja_romaji: Tesshūmeirei
   ko: 철수 명령
   ko_rr:
   zh-TW:
