--- a/rush.yaml
+++ b/rush.yaml
@@ -102368,3 +102368,45 @@ sets:
     rarities:
     - Super Rare
 yugipedia_page_id: 972993
+---
+konami_id:
+name:
+  en: Defrostrooper
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: デフロストルーパー
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 3
+atk: 1200
+def: 100
+images:
+- index: 1
+  image: Defrostrooper-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP029
+    set_name: Saikyō Jump August 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 974974
