--- a/data/cards/kdb19011.yaml
+++ b/data/cards/kdb19011.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19011
 password:
 name:
   en: Sky Striker Ace - Camellia
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    効果モンスター２体
+    このカードはＬ召喚でしかＥＸデッキから特殊召喚できず、自分は「閃刀姫－カメリア」を１ターンに１度しか特殊召喚できない。①：１ターンに１度、自分の墓地の魔法カードが３枚以下の場合に発動できる。デッキから「閃刀」カード１枚を墓地へ送る。②：このカードが墓地へ送られた場合、相手フィールドのモンスター１体を対象として発動できる。このカードを相手フィールドに特殊召喚し、対象のモンスターを墓地へ送る。このカードのコントロールはこのターンのエンドフェイズに元々の持ち主に戻る。
   ko:
   zh-TW:
   zh-CN:
@@ -47,5 +49,5 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 936553
