--- a/data/rush/18679.yaml
+++ b/data/rush/18679.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18679
 name:
   en: Transamu Rainac Overwrite
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分または相手フィールドの表側表示モンスター（レベル４以上）１体を選び、そのレベルをターン終了時まで３下げる。その後、このカードの攻撃力をターン終了時まで５００アップする。自分の墓地に「トランザム・ライナック」がいる場合、さらにこのターン、このカードのカード名は「トランザム・ライナック」になる。
   ko:
   zh-TW:
   zh-CN:
