--- a/data/rush/19091.yaml
+++ b/data/rush/19091.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19091
 name:
   en: Hallowed Light Sorcerer
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ３００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで、［自分フィールドの表側表示モンスター（光属性／魔法使い族）の数］×３００ダウンする。
   ko:
   zh-TW:
   zh-CN:
