--- a/rush.yaml
+++ b/rush.yaml
@@ -92043,6 +92043,65 @@ sets:
     - Normal Parallel Rare
 yugipedia_page_id: 716239
 ---
+konami_id: 18679
+name:
+  en: Transamu Rainac Overwrite
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・ライナック・オーバーライト
+  ja_romaji: Toranzamu Rainakku Ōbāraito
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Reduce the Level of 1 face-up Level 4 or higher monster on either field by 3 until the end of this turn. Then, this card gains 500 ATK until the end of this turn. Then, if you have "Transamu Rainac" in your Graveyard, this card's name becomes "Transamu Rainac" this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分または相手フィールドの表側表示モンスター（レベル４以上）１体を選び、そのレベルをターン終了時まで３下げる。その後、このカードの攻撃力をターン終了時まで５００アップする。自分の墓地に「トランザム・ライナック」がいる場合、さらにこのターン、このカードのカード名は「トランザム・ライナック」になる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1600
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuRainacOverwrite-RDCGR2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/CGR2-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Volume 2 promotional card
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 934466
+---
 konami_id: 18680
 name:
   en: Meteor Black Dragon
@@ -100629,7 +100688,7 @@ sets:
     - Over Rush Rare
 yugipedia_page_id: 809372
 ---
-konami_id:
+konami_id: 19091
 name:
   en: Hallowed Light Sorcerer
   de:
@@ -100651,7 +100710,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ３００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -100663,7 +100723,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで、［自分フィールドの表側表示モンスター（光属性／魔法使い族）の数］×３００ダウンする。
   ko:
   zh-TW:
   zh-CN:
@@ -100725,63 +100786,6 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 934251
----
-konami_id:
-name:
-  en: Transamu Rainac Overwrite
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: トランザム・ライナック・オーバーライト
-  ja_romaji: Toranzamu Rainakku Ōbāraito
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Send the top card of your Deck to the Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Reduce the Level of 1 face-up Level 4 or higher monster on either field by 3 until the end of this turn. Then, this card gains 500 ATK until the end of this turn. Then, if you have "Transamu Rainac" in your Graveyard, this card's name becomes "Transamu Rainac" this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Galaxy / Effect
-attribute: LIGHT
-level: 7
-atk: 2500
-def: 1600
-series:
-- Transamu
-images:
-- index: 1
-  image: TransamuRainacOverwrite-RDCGR2-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/CGR2-JP001
-    set_name: Yu-Gi-Oh! GO RUSH!! Volume 2 promotional card
-    rarities:
-    - Ultra Rare
-yugipedia_page_id: 934466
 ---
 konami_id:
 name:
@@ -102378,7 +102382,7 @@ name:
   it:
   pt:
   ja: デフロストルーパー
-  ja_romaji:
+  ja_romaji: Defurosutorūpā
   ko:
   ko_rr:
   zh-TW:
