--- a/data/rush/15899.yaml
+++ b/data/rush/15899.yaml
@@ -55,7 +55,7 @@ level: 3
 atk: 500
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeMachineMagnumOverlordR-RDVSP1-JP-C.png
