--- a/data/rush/16569.yaml
+++ b/data/rush/16569.yaml
@@ -47,7 +47,7 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeSkystreamMagnumOverlordL-RDVSP1-JP-NPR.png
