--- a/data/rush/16571.yaml
+++ b/data/rush/16571.yaml
@@ -47,7 +47,7 @@ level: 3
 atk: 500
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeSkystreamMagnumOverlordR-RDVSP1-JP-NPR.png
