--- a/data/rush/17667.yaml
+++ b/data/rush/17667.yaml
@@ -1,6 +1,6 @@
 konami_id: 17667
 name:
-  en: Supreme Beast Magnum Overlord [R]
+  en: Supreme Wildgleam Magnum Overlord [R]
   de:
   es:
   fr:
@@ -49,10 +49,10 @@ level: 3
 atk: 500
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
-  image: SupremeBeastMagnumOverlordR-RDVSP1-JP-NPR.png
+  image: SupremeWildgleamMagnumOverlordR-RDVSP1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP003
