--- a/data/rush/15897.yaml
+++ b/data/rush/15897.yaml
@@ -55,7 +55,7 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeMachineMagnumOverlordL-RDVSP1-JP-C.png
