--- a/data/rush/17665.yaml
+++ b/data/rush/17665.yaml
@@ -1,6 +1,6 @@
 konami_id: 17665
 name:
-  en: Supreme Beast Magnum Overlord [L]
+  en: Supreme Wildgleam Magnum Overlord [L]
   de:
   es:
   fr:
@@ -49,10 +49,10 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
-  image: SupremeBeastMagnumOverlordL-RDVSP1-JP-NPR.png
+  image: SupremeWildgleamMagnumOverlordL-RDVSP1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP001
