--- a/data/rush/17666.yaml
+++ b/data/rush/17666.yaml
@@ -1,6 +1,6 @@
 konami_id: 17666
 name:
-  en: Supreme Beast Magnum Overlord
+  en: Supreme Wildgleam Magnum Overlord
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    You can Maximum Summon this card together with "Supreme Beast Magnum Overlord [L]" and "Supreme Beast Magnum Overlord [R]".
+    You can Maximum Summon this card together with "Supreme Wildgleam Magnum Overlord [L]" and "Supreme Wildgleam Magnum Overlord [R]".
   de:
   es:
   fr:
@@ -64,11 +64,11 @@ level: 10
 atk: 1900
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 maximum_atk: 3500
 images:
 - index: 1
-  image: SupremeBeastMagnumOverlord-RDVSP1-JP-NPR.png
+  image: SupremeWildgleamMagnumOverlord-RDVSP1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP002
