--- a/data/rush/18754.yaml
+++ b/data/rush/18754.yaml
@@ -45,7 +45,7 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeFullsteamMagnumOverlordL-RDVSP1-JP-NPR.png
