--- a/rush.yaml
+++ b/rush.yaml
@@ -18090,7 +18090,7 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeMachineMagnumOverlordL-RDVSP1-JP-C.png
@@ -18215,7 +18215,7 @@ level: 10
 atk: 1900
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 maximum_atk: 3500
 images:
 - index: 1
@@ -18320,7 +18320,7 @@ level: 3
 atk: 500
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeMachineMagnumOverlordR-RDVSP1-JP-C.png
@@ -32487,7 +32487,7 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeSkystreamMagnumOverlordL-RDVSP1-JP-NPR.png
@@ -32585,7 +32585,7 @@ level: 10
 atk: 1900
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 maximum_atk: 3500
 images:
 - index: 1
@@ -32667,7 +32667,7 @@ level: 3
 atk: 500
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeSkystreamMagnumOverlordR-RDVSP1-JP-NPR.png
@@ -65161,7 +65161,7 @@ yugipedia_page_id: 716895
 ---
 konami_id: 17665
 name:
-  en: Supreme Beast Magnum Overlord [L]
+  en: Supreme Wildgleam Magnum Overlord [L]
   de:
   es:
   fr:
@@ -65210,10 +65210,10 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
-  image: SupremeBeastMagnumOverlordL-RDVSP1-JP-NPR.png
+  image: SupremeWildgleamMagnumOverlordL-RDVSP1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP001
@@ -65234,7 +65234,7 @@ yugipedia_page_id: 716930
 ---
 konami_id: 17666
 name:
-  en: Supreme Beast Magnum Overlord
+  en: Supreme Wildgleam Magnum Overlord
   de:
   es:
   fr:
@@ -65248,7 +65248,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    You can Maximum Summon this card together with "Supreme Beast Magnum Overlord [L]" and "Supreme Beast Magnum Overlord [R]".
+    You can Maximum Summon this card together with "Supreme Wildgleam Magnum Overlord [L]" and "Supreme Wildgleam Magnum Overlord [R]".
   de:
   es:
   fr:
@@ -65298,11 +65298,11 @@ level: 10
 atk: 1900
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 maximum_atk: 3500
 images:
 - index: 1
-  image: SupremeBeastMagnumOverlord-RDVSP1-JP-NPR.png
+  image: SupremeWildgleamMagnumOverlord-RDVSP1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP002
@@ -65323,7 +65323,7 @@ yugipedia_page_id: 716929
 ---
 konami_id: 17667
 name:
-  en: Supreme Beast Magnum Overlord [R]
+  en: Supreme Wildgleam Magnum Overlord [R]
   de:
   es:
   fr:
@@ -65372,10 +65372,10 @@ level: 3
 atk: 500
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
-  image: SupremeBeastMagnumOverlordR-RDVSP1-JP-NPR.png
+  image: SupremeWildgleamMagnumOverlordR-RDVSP1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP003
@@ -94431,7 +94431,7 @@ level: 4
 atk: 800
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeFullsteamMagnumOverlordL-RDVSP1-JP-NPR.png
@@ -94504,7 +94504,7 @@ level: 10
 atk: 1900
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 maximum_atk: 3500
 images:
 - index: 1
@@ -94565,7 +94565,7 @@ level: 3
 atk: 500
 def: 0
 series:
-- Supreme Magnum Overlord
+- Magnum Overlord
 images:
 - index: 1
   image: SupremeFullsteamMagnumOverlordR-RDVSP1-JP-NPR.png
@@ -100736,7 +100736,7 @@ atk: 1200
 def: 0
 images:
 - index: 1
-  image: HallowedLightSorcerer-RDSJMP-JP-OP.png
+  image: HallowedLightSorcerer-RDSJMP-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP028
