--- a/rush.yaml
+++ b/rush.yaml
@@ -65579,7 +65579,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 8 or more DARK Attribute Spellcaster Type monsters in your Graveyard during your Main Phase that you Special Summoned this card.
+    You have 8 or more DARK Attribute Spellcaster Type monsters in your Graveyard during your Main Phase this card was Special Summoned.
   de:
   es:
   fr:
@@ -102414,3 +102414,72 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 974974
+---
+konami_id:
+name:
+  en: Axetion Melody the Music Princess
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>環<rt>かん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>アクションメロディ
+  ja_romaji: Kangengakki Akushon Merodi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 Spell Card from your Graveyard on either the top or bottom of the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your opponent's field loses 2000 ATK/DEF until the end of your opponent's next turn. Then, if you placed "Straight Pierce" or "Fusion" to meet the requirement, you can draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Fusion / Effect
+attribute: WIND
+level: 8
+atk: 2800
+def: 2800
+materials:
+  en: |-
+    "Tubardiche the Music Princess" + "Boton the Music Princess"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Music Princess
+images:
+- index: 1
+  image: AxetionMelodytheMusicPrincess-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP020
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 975039
