--- a/data/cards/35149085.yaml
+++ b/data/cards/35149085.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Selecciona 1 monstruo de Tipo Bestia que controles; devuélvelo a la mano y, si lo haces, Invoca de Modo Especial, desde tu mano, 1 monstruo de Tipo Bestia con el mismo Nivel que el monstruo que fue devuelto a la mano.
   fr: |-
-    Renvoyez dans la main de son propriétaire 1 monstre de Type Bête face recto de votre Terrain et le propriétaire de cette carte fait l'Invocation Spéciale d'1 monstre de Type Bête du même Niveau que le monstre de sa main.
+    Ciblez 1 monstre de Type Bête que vous contrôlez ; renvoyez-le à la main, et si vous le faites, Invoquez Spécialement 1 monstre de Type Bête du même Niveau que le monstre renvoyé à la main depuis votre main.
   it: |-
     Scegli come bersaglio 1 mostro di Tipo Bestia che controlli; fallo ritornare nella mano e, se lo fai, Evoca Specialmente dalla tua mano 1 mostro di Tipo Bestia con lo stesso Livello del mostro che è stato fatto ritornare nella mano.
   pt: |-
