--- a/data/cards/63013339.yaml
+++ b/data/cards/63013339.yaml
@@ -1,5 +1,5 @@
 konami_id: 19011
-password:
+password: 63013339
 name:
   en: Sky Striker Ace - Camellia
   de:
@@ -40,7 +40,7 @@ series:
 - Sky Striker Ace
 images:
 - index: 1
-  image: SkyStrikerAceCamellia-YOS1-JP-OP.png
+  image: SkyStrikerAceCamellia-YOS1-JP-UR.png
 sets:
   ja:
   - set_number: YOS1-JP002
