--- a/data/rush/15328.yaml
+++ b/data/rush/15328.yaml
@@ -36,6 +36,8 @@ attribute: EARTH
 level: 7
 atk: 2300
 def: 2100
+series:
+- Gaia
 images:
 - index: 1
   image: GaiaTheFierceKnight-RDSBD3-JP-C.png
