--- a/rush.yaml
+++ b/rush.yaml
@@ -5901,6 +5901,8 @@ attribute: EARTH
 level: 7
 atk: 2300
 def: 2100
+series:
+- Gaia
 images:
 - index: 1
   image: GaiaTheFierceKnight-RDSBD3-JP-C.png
@@ -69062,6 +69064,8 @@ attribute: DARK
 level: 5
 atk: 2000
 def: 1500
+series:
+- Gaia
 images:
 - index: 1
   image: CurseofDragon-RDB222-JP-C.png
@@ -81523,6 +81527,8 @@ materials:
   ko:
   zh-TW:
   zh-CN:
+series:
+- Gaia
 images:
 - index: 1
   image: GaiatheDragonChampion-RDB223-JP-C.png
@@ -102483,3 +102489,184 @@ sets:
     rarities:
     - Over Rush Rare
 yugipedia_page_id: 975039
+---
+konami_id:
+name:
+  en: Blazebolt Chemistorm Fenghuang Volcalize Phoenix
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>火<rt>か</rt></ruby><ruby>轟<rt>ごう</rt></ruby><ruby>嵐<rt>らん</rt></ruby><ruby>凰<rt>おう</rt></ruby>ヴォルカライズ・フェニックス
+  ja_romaji: Kagōran'ō Vorukaraizu Fenikkusu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Maximum Summon this card together with "Blazebolt Chemistorm Fenghuang Volcalize Phoenix [L]" and "Blazebolt Chemistorm Fenghuang Volcalize Phoenix [R]".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Maximum / Effect
+attribute: FIRE
+level: 10
+atk: 2400
+def: 0
+series:
+- Chemistry
+maximum_atk: 3500
+images:
+- index: 1
+  image: BlazeboltChemistormFenghuangVolcalizePhoenix-OW.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP0??
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+yugipedia_page_id: 975309
+---
+konami_id:
+name:
+  en: Blazebolt Chemistorm Fenghuang Volcalize Phoenix [L]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>火<rt>か</rt></ruby><ruby>轟<rt>ごう</rt></ruby><ruby>嵐<rt>らん</rt></ruby><ruby>凰<rt>おう</rt></ruby>ヴォルカライズ・フェニックス［<ruby>Ｌ<rt>エル</rt></ruby>］
+  ja_romaji: Kagōran'ō Vorukaraizu Fenikkusu [Eru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Thunder / Maximum / Effect
+attribute: FIRE
+level: 10
+atk: 2000
+def: 0
+series:
+- Chemistry
+images:
+- index: 1
+  image: BlazeboltChemistormFenghuangVolcalizePhoenix-OW.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP0??
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+yugipedia_page_id: 975310
+---
+konami_id:
+name:
+  en: Blazebolt Chemistorm Fenghuang Volcalize Phoenix [R]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>火<rt>か</rt></ruby><ruby>轟<rt>ごう</rt></ruby><ruby>嵐<rt>らん</rt></ruby><ruby>凰<rt>おう</rt></ruby>ヴォルカライズ・フェニックス［<ruby>Ｒ<rt>アール</rt></ruby>］
+  ja_romaji: Kagōran'ō Vorukaraizu Fenikkusu [Āru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Aqua / Maximum / Effect
+attribute: FIRE
+level: 10
+atk: 2000
+def: 0
+series:
+- Chemistry
+images:
+- index: 1
+  image: BlazeboltChemistormFenghuangVolcalizePhoenix-OW.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP0??
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+yugipedia_page_id: 975311
