--- a/rush.yaml
+++ b/rush.yaml
@@ -102670,3 +102670,60 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
 yugipedia_page_id: 975311
+---
+konami_id:
+name:
+  en: Sansetsukontra the Music Fiend
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>連<rt>れん</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>鬼<rt>き</rt></ruby>サンセツコントラ
+  ja_romaji: Rengakki Sansetsukontora
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 10 or more cards in your Deck and no other monsters on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, if your opponent has a face-up monster with 3000 or more ATK on their field, you can draw 3 cards.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WIND
+level: 7
+atk: 2000
+def: 2500
+series:
+- Music Princess
+images:
+- index: 1
+  image: SansetsukontratheMusicFiend-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP024
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 975422
