--- a/data/cards/36256625.yaml
+++ b/data/cards/36256625.yaml
@@ -25,7 +25,7 @@ text:
     Una Invocación de Fusión de esta carta sólo se puede realizar con los Monstruos Material de Fusión nombrados arriba. Durante una batalla en la que esta carta esté atacando a un monstruo en Posición de Defensa cuya DEF sea inferior al ATK de esta carta, inflige la diferencia como daño de batalla a los Life Points de tu adversario.
   fr: |-
     "Steamroid" + "Drillroid" + "Sous-Marinroid"
-    Une Invocation Fusion de cette carte ne peut être réalisée qu'avec les Monstres-Matériels de Fusion ci-dessus. Durant un combat entre cette carte attaquant et un monstre en Position de Défense dont la DEF est inférieure à l'ATK de cette carte, infligez la différence en dommages de combat aux Life Points de votre adversaire.
+    L'Invocation Fusion de cette carte ne peut être faite qu'avec les Matériels Fusion ci-dessus. Si cette carte attaque un monstre en Position de Défense, infligez des dommages de combat perçants.
   it: |-
     "Steamroid" + "Drillroid" + "Submarineroid"
     L'Evocazione per Fusione di questa carta può essere effettuata solo con i Mostri Materiale da Fusione sopra riportati. Durante un combattimento tra questa carta attaccante ed un mostro in Posizione di Difesa il cui DEF sia inferiore all'ATK di questa carta, infliggi la differenza ai Life Points del tuo avversario come danno da combattimento.
