--- a/data/cards/99861526.yaml
+++ b/data/cards/99861526.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Esta carta puede atacar a tu adversario directamente, pero cuando lo hace usando este efecto, el daño de batalla que inflige a tu adversario es el ATK original de esta carta. Al final del Damage Step, si esta carta atacó o fue atacada: puedes cambiar esta carta a Posición de Defensa.
   fr: |-
-    Cette carte peut attaquer directement votre adversaire, mais lorsqu'elle le fait en utilisant cet effet, les dommages de combat infligés à votre adversaire sont l'ATK d'origine de cette carte. À la fin de la Damage Step, si cette carte a attaqué ou a été attaquée : vous pouvez changer cette carte en Position de Défense.
+    Cette carte peut attaquer directement votre adversaire, mais lorsqu'elle le fait en utilisant cet effet, les dommages de combat infligés à votre adversaire sont l'ATK d'origine de cette carte. À la fin de la Damage Step, si cette carte a combattu : vous pouvez changer cette carte en Position de Défense.
   it: |-
     Questa carta può attaccare il tuo avversario direttamente, ma quando lo fa utilizzando questo effetto, il danno da combattimento inflitto al tuo avversario è l'ATK originale di questa carta. Alla fine del Damage Step, se questa carta ha attaccato o è stata attaccata: puoi mettere questa carta in Posizione di Difesa.
   pt: |-
