--- a/data/cards/81003500.yaml
+++ b/data/cards/81003500.yaml
@@ -4,7 +4,7 @@ name:
   en: Elemental HERO Necroid Shaman
   de: Elementar-HELD Necroid Shaman
   es: HÉROE Elemental Necroid Shaman
-  fr: Chaman Nécroïde, HÉROS Élémentaire
+  fr: Chaman Nécroid, HÉROS Élémentaire
   it: Necroid-Sciamano EROE Elementale
   pt: Xamã Necroide, o HERÓI do Elemento
   ja: <ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> ネクロイド・シャーマン
@@ -25,7 +25,7 @@ text:
     Este monstruo no puede ser Invocado mediante una Invocación Especial excepto mediante una Invocación de Fusión. Cuando esta carta es Invocada mediante una Invocación Especial, destruye 1 monstruo en el Campo de tu adversario. Luego selecciona 1 monstruo del Cementerio de tu adversario e Invócalo mediante una Invocación Especial al Campo de tu adversario.
   fr: |-
     "Cœur Farouche, HÉROS Élémentaire" + "Nécrombre, HÉROS Élémentaire"
-    Ce monstre ne peut pas être Invoqué par Invocation Spéciale excepté par une Invocation Fusion. Lorsque cette carte est Invoquée par Invocation Spéciale, détruisez 1 monstre sur le Terrain de votre adversaire. Puis sélectionnez 1 monstre depuis le Cimetière de votre adversaire et faites-en l'Invocation Spéciale sur le Terrain de votre adversaire.
+    Uniquement Invocable par Fusion. Si cette carte est Invoquée Spécialement : ciblez 1 monstre contrôlé par votre adversaire ; détruisez la cible, puis Invoquez Spécialement 1 monstre depuis le Cimetière de votre adversaire sur son Terrain.
   it: |-
     "Wildheart EROE Elementale" + "Necro-Ombra EROE Elementale"
     Deve essere Evocato tramite Fusione e non può essere Evocato Specialmente in altri modi. Quando questa carta viene Evocata Specialmente: scegli come bersaglio 1 mostro controllato dal tuo avversario; distruggi quel bersaglio, poi Evoca Specialmente 1 mostro dal Cimitero del tuo avversario sul suo Terreno.
