--- a/data/cards/03734202.yaml
+++ b/data/cards/03734202.yaml
@@ -144,6 +144,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 310925
