--- a/data/cards/74701381.yaml
+++ b/data/cards/74701381.yaml
@@ -8,7 +8,7 @@ name:
   it: Intervento sul DNA
   pt: Cirurgia ao DNA
   ja: ＤＮＡ<ruby>改<rt>かい</rt></ruby><ruby>造<rt>ぞう</rt></ruby><ruby>手<rt>しゅ</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
-  ja_romaji: Dīenuē Kaizō Shujutsu
+  ja_romaji: Dī Enu Ē Kaizō Shujutsu
   ko: DNA 개조 수술
   ko_rr: DNA Gaejo Susul
   zh-TW:
