--- a/data/cards/01041278.yaml
+++ b/data/cards/01041278.yaml
@@ -77,6 +77,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 714144
