--- a/data/cards/08491961.yaml
+++ b/data/cards/08491961.yaml
@@ -123,6 +123,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 517211
