--- a/data/cards/14532163.yaml
+++ b/data/cards/14532163.yaml
@@ -209,6 +209,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Semi-Limited
 yugipedia_page_id: 666557
