--- a/data/cards/15443125.yaml
+++ b/data/cards/15443125.yaml
@@ -77,6 +77,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 716821
