--- a/data/cards/17266660.yaml
+++ b/data/cards/17266660.yaml
@@ -204,6 +204,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 46075
