--- a/data/cards/24010609.yaml
+++ b/data/cards/24010609.yaml
@@ -148,6 +148,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 552513
