--- a/data/cards/33918636.yaml
+++ b/data/cards/33918636.yaml
@@ -115,6 +115,6 @@ sets:
     - Super Rare
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 581777
