--- a/data/cards/38814750.yaml
+++ b/data/cards/38814750.yaml
@@ -174,6 +174,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 411255
