--- a/data/cards/43262273.yaml
+++ b/data/cards/43262273.yaml
@@ -121,6 +121,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Limited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 102337
