--- a/data/cards/55584558.yaml
+++ b/data/cards/55584558.yaml
@@ -103,6 +103,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 716332
