--- a/data/cards/63166095.yaml
+++ b/data/cards/63166095.yaml
@@ -180,6 +180,6 @@ sets:
     - Secret Rare
     - Extra Secret Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Semi-Limited
   ocg: Semi-Limited
 yugipedia_page_id: 552508
