--- a/data/cards/68304193.yaml
+++ b/data/cards/68304193.yaml
@@ -98,6 +98,6 @@ sets:
     - Super Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 715519
