--- a/data/cards/69015963.yaml
+++ b/data/cards/69015963.yaml
@@ -174,6 +174,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Forbidden
   ocg: Limited
 yugipedia_page_id: 23
