--- a/data/cards/92107604.yaml
+++ b/data/cards/92107604.yaml
@@ -89,6 +89,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Semi-Limited
 yugipedia_page_id: 716538
