--- a/data/cards/95474755.yaml
+++ b/data/cards/95474755.yaml
@@ -103,6 +103,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 519443
