--- a/data/cards/37961969.yaml
+++ b/data/cards/37961969.yaml
@@ -8,7 +8,7 @@ name:
   it: Tiaracrimalamenti Havnis
   pt: Lagrimentiara Havnis
   ja: ティアラメンツ・ハゥフニス
-  ja_romaji: Tiaramentsu Haufenisu
+  ja_romaji: Tiaramentsu Haufunisu
   ko: 티아라멘츠 허프니스
   ko_rr: Tiaramencheu Heopeuniseu
   zh-TW:
