--- a/data/cards/74078255.yaml
+++ b/data/cards/74078255.yaml
@@ -8,7 +8,7 @@ name:
   it: Tiaracrimalamenti Merrli
   pt: Lagrimentiara Merrli
   ja: ティアラメンツ・メイルゥ
-  ja_romaji: Tiaramentsu Meiru
+  ja_romaji: Tiaramentsu Meirū
   ko: 티아라멘츠 메이루
   ko_rr: Tiaramencheu Meiru
   zh-TW:
