--- a/data/cards/03643300.yaml
+++ b/data/cards/03643300.yaml
@@ -43,10 +43,10 @@ def: 1600
 images:
 - index: 1
   image: TheLegendaryFisherman-LART-EN-UR-LE.png
-  illustration: TheLegendaryFisherman-TF04-JP-VG.jpg
+  illustration: TheLegendaryFisherman-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: TheLegendaryFisherman-PSV-EN-UR-UE-25thAnniversaryEdition.png
-  illustration: TheLegendaryFisherman-TF04-EN-VG.jpg
+  illustration: TheLegendaryFisherman-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN190
