--- a/data/cards/04779091.yaml
+++ b/data/cards/04779091.yaml
@@ -7,7 +7,7 @@ name:
   fr: Yubel - Terreur Incarnée
   it: Yubel - Terrore Incarnato
   pt: Yubel - Encarnação do Terror
-  ja: ユベル－<ruby>{{Fullwidth wordwrap|Ｄａｓ　Ａｂｓｃｈｅｕｌｉｃｈ　Ｒｉｔｔｅｒ}}<rt>ダス・アプシェリッヒ・リッター</rt></ruby>
+  ja: ユベル－<ruby>Ｄａｓ　Ａｂｓｃｈｅｕｌｉｃｈ　Ｒｉｔｔｅｒ<rt>ダス・アプシェリッヒ・リッター</rt></ruby>
   ja_romaji: Yuberu - Dasu Apusherihhi Rittā
   ko: 유벨－다스 압쇼이리히 리터
   ko_rr:
