--- a/data/cards/05645210.yaml
+++ b/data/cards/05645210.yaml
@@ -7,7 +7,7 @@ name:
   fr: Vénus Splendide
   it: Venere Splendida
   pt: Vênus Esplêndida
-  ja: <ruby>{{fullwidth wordwrap|Ｔｈｅ ｓｐｌｅｎｄｉｄ ＶＥＮＵＳ}}<rt>ザ・スプレンディッド・ヴィーナス</rt></ruby>
+  ja: <ruby>Ｔｈｅ ｓｐｌｅｎｄｉｄ ＶＥＮＵＳ<rt>ザ・スプレンディッド・ヴィーナス</rt></ruby>
   ja_romaji: Za Supurendiddo Vīnasu
   ko: The splendid VENUS
   ko_rr:
