--- a/data/cards/43452193.yaml
+++ b/data/cards/43452193.yaml
@@ -3,7 +3,7 @@ password: 43452193
 name:
   en: Mirror Gate
   de: Spiegeltor
-  es: 'Espejo Puerta '
+  es: Espejo Puerta
   fr: Porte du Tunnel Miroir Extra-Dimensionel
   it: Portale Riflesso
   pt: Portal do Espelho
