--- a/data/cards/77608643.yaml
+++ b/data/cards/77608643.yaml
@@ -3,7 +3,7 @@ password: 77608643
 name:
   en: Destiny HERO - Captain Tenacious
   de: Schicksals-HELD - Captain Tenacious
-  es: 'HÉROE del Destino - Captain Tenacious '
+  es: HÉROE del Destino - Captain Tenacious
   fr: Capitaine Tenace - HÉROS de la Destinée
   it: Capitano Tenace - EROE del Destino
   pt: HERÓI do Destino - Capitão Tenaz
