--- a/data/cards/88071625.yaml
+++ b/data/cards/88071625.yaml
@@ -7,7 +7,7 @@ name:
   fr: Neptune, le Tyran
   it: Il Tiranno Nettuno
   pt:
-  ja: <ruby>{{Fullwidth wordwrap|Ｔｈｅ　ｔｙｒａｎｔ　ＮＥＰＴＵＮＥ}}<rt>ザ・タイラント・ネプチューン</rt></ruby>
+  ja: <ruby>Ｔｈｅ　ｔｙｒａｎｔ　ＮＥＰＴＵＮＥ<rt>ザ・タイラント・ネプチューン</rt></ruby>
   ja_romaji: Za Tairanto Nepuchūn
   ko: The tyrant NEPTUNE
   ko_rr:
