--- a/rush.yaml
+++ b/rush.yaml
@@ -102727,3 +102727,41 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 975422
+---
+konami_id:
+name:
+  en: Cat-trois Choice
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: キャットロワ チョイス
+  ja_romaji: Kyattorowa Choisu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    [TBA]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: ???
+property: ???
+images:
+- index: 1
+  image: CattroisChoice-OW.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP0??
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+yugipedia_page_id: 975588
