--- a/data/cards/23923758.yaml
+++ b/data/cards/23923758.yaml
@@ -1,5 +1,5 @@
 konami_id: 18899
-password:
+password: 23923758
 name:
   en: Steam Knight - Hamburk
   de:
@@ -34,7 +34,7 @@ atk: 2500
 def: 200
 images:
 - index: 1
-  image: SteamKnightHamburk-CCC1-JP-OP.png
+  image: SteamKnightHamburk-CCC1-JP-NPR.png
 sets:
   ja:
   - set_number: CCC1-JPS01
