--- a/rush.yaml
+++ b/rush.yaml
@@ -96660,7 +96660,7 @@ atk: 1400
 def: 700
 images:
 - index: 1
-  image: CocoshtheSpellcasterofHappiness-RDCCC1-JP-OP.png
+  image: CocoshtheSpellcasterofHappiness-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/CCC1-JPS01
@@ -102767,3 +102767,54 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
 yugipedia_page_id: 975588
+---
+konami_id:
+name:
+  en: Giant Tiger Strike
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 大激虎
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack, return 1 face-up Level 7 or higher WIND Attribute monster from your field to the owner's hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change the attacking monster to face-up Defense Position. Then, inflict 1000 damage to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: GiantTigerStrike-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP037
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 975603
