--- a/data/rush/yugipedia975603.yaml
+++ b/data/rush/yugipedia975603.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 大激虎
-  ja_romaji:
+  ja: <ruby>大<rt>だい</rt></ruby><ruby>激<rt>げき</rt></ruby><ruby>虎<rt>ど</rt></ruby>
+  ja_romaji: Daigekido
   ko:
   ko_rr:
   zh-TW:
