--- a/data/cards/05043010.yaml
+++ b/data/cards/05043010.yaml
@@ -64,6 +64,8 @@ images:
 - index: 3
   image: FirewallDragon-MGED-EN-R-1E-AA2.png
   illustration: FirewallDragon-OW-3.png
+- index: 4
+  image: FirewallDragon-CCC1-JP-NPR.png
 sets:
   en:
   - set_number: COTD-EN043
