--- a/data/cards/23965033.yaml
+++ b/data/cards/23965033.yaml
@@ -54,9 +54,10 @@ series:
 images:
 - index: 1
   image: AmazonessAugusta-DP27-JP-UR.png
-  illustration: AmazonessAugusta-OW.png
+  illustration: AmazonessAugusta-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: AmazonessAugusta-DABL-EN-C-1E.png
+  illustration: AmazonessAugusta-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DABL-EN097
