--- a/data/cards/84013237.yaml
+++ b/data/cards/84013237.yaml
@@ -66,6 +66,8 @@ images:
 - index: 3
   image: Number39Utopia-BROL-EN-UR-1E.png
   illustration: Number39Utopia-OW-3.png
+- index: 4
+  image: Number39Utopia-CCC1-JP-NPR.png
 sets:
   en:
   - set_number: YS11-EN041
