--- a/data/rush/17488.yaml
+++ b/data/rush/17488.yaml
@@ -40,6 +40,8 @@ images:
   illustration: GalacticaOblivion-G002-JP-VG-artwork.png
 - index: 2
   image: GalacticaOblivion-RD711B-JP-NPR.png
+- index: 3
+  image: GalacticaOblivion-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP09-JP002
