--- a/data/rush/17505.yaml
+++ b/data/rush/17505.yaml
@@ -53,6 +53,8 @@ images:
   image: JointechRex-RDGRD2-JP-NPR.png
 - index: 2
   image: JointechRex-RD711B-JP-NPR.png
+- index: 3
+  image: JointechRex-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP09-JP019
