--- a/data/cards/50486289.yaml
+++ b/data/cards/50486289.yaml
@@ -44,8 +44,10 @@ series:
 images:
 - index: 1
   image: AmazonessWarChief-DP27-JP-SR.png
+  illustration: AmazonessWarChief-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: AmazonessWarChief-DABL-EN-C-1E.png
+  illustration: AmazonessWarChief-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DABL-EN095
