--- a/data/cards/86758746.yaml
+++ b/data/cards/86758746.yaml
@@ -40,9 +40,10 @@ series:
 images:
 - index: 1
   image: AmazonessSecretArts-DP27-JP-R.png
-  illustration: AmazonessSecretArts-OW.png
+  illustration: AmazonessSecretArts-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: AmazonessSecretArts-DABL-EN-C-1E.png
+  illustration: AmazonessSecretArts-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DABL-EN099
