--- a/data/rush/17865.yaml
+++ b/data/rush/17865.yaml
@@ -53,6 +53,8 @@ images:
   image: BlueToothBurstDragon-RDKP10-JP-UR.png
 - index: 2
   image: BlueToothBurstDragon-RD711B-JP-NPR.png
+- index: 3
+  image: BlueToothBurstDragon-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP10-JP017
