--- a/rush.yaml
+++ b/rush.yaml
@@ -58401,6 +58401,8 @@ images:
   illustration: GalacticaOblivion-G002-JP-VG-artwork.png
 - index: 2
   image: GalacticaOblivion-RD711B-JP-NPR.png
+- index: 3
+  image: GalacticaOblivion-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP09-JP002
@@ -59442,6 +59444,8 @@ images:
   image: JointechRex-RDGRD2-JP-NPR.png
 - index: 2
   image: JointechRex-RD711B-JP-NPR.png
+- index: 3
+  image: JointechRex-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP09-JP019
@@ -70471,6 +70475,8 @@ images:
   image: BlueToothBurstDragon-RDKP10-JP-UR.png
 - index: 2
   image: BlueToothBurstDragon-RD711B-JP-NPR.png
+- index: 3
+  image: BlueToothBurstDragon-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP10-JP017
