--- a/data/cards/24311595.yaml
+++ b/data/cards/24311595.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Mientras esta carta esté boca arriba en tu Campo, cuando un monstruo en tu Campo que incluya "roid" en su nombre sea destruido como resultado de una batalla y mandado al Cementerio, puedes devolver ese monstruo a la mano.
   fr: |-
-    Tant que cette carte est face recto sur votre Terrain, lorsqu'un monstre sur votre Terrain qui inclut "roid" dans son nom de carte est détruit à l'issue d'un combat et envoyé au Cimetière, vous pouvez renvoyer ce monstre dans la main.
+    Lorsqu’un monstre "roid" que vous contrôlez est détruit au combat et envoyé au Cimetière : vous pouvez renvoyer le monstre à la main. Vous devez contrôler cette carte face recto sur le Terrain pour activer et résoudre cet effet.
   it: |-
     Fino a quando questa carta è scoperta sul tuo Terreno, quando un mostro sul tuo Terreno che include "roid" nel suo nome viene distrutto in seguito ad una battaglia e mandato al Cimitero, puoi far ritornare quel mostro nella tua mano.
   pt: |-
