--- a/data/cards/98927491.yaml
+++ b/data/cards/98927491.yaml
@@ -25,7 +25,7 @@ text:
     Este monstruo no puede ser Invocado mediante una Invocación Especial excepto mediante una Invocación de Fusión. Cuando un monstruo en tu Campo es destruido como resultado de una batalla y mandado al Cementerio, puedes Invocarlo mediante una Invocación Especial en Posición de Defensa. Sólo puedes utilizar este efecto una vez por turno.
   fr: |-
     "Sauveteuroid" + "Ambulanceroid"
-    Ce monstre ne peut pas être Invoqué par Invocation Spéciale excepté par une Invocation Fusion. Lorsqu'un monstre sur votre Terrain est détruit à l'issue d'un combat et envoyé au Cimetière, vous pouvez faire l'Invocation Spéciale de ce monstre en Position de Défense. Vous ne pouvez utiliser cet effet qu'une fois par tour.
+    Uniquement Invocable par Fusion. Une fois par tour, lorsqu'un monstre que vous contrôlez est détruit au combat et envoyé au Cimetière : vous pouvez Invoquer Spécialement le monstre en Position de Défense.
   it: |-
     "Rescueroid" + "Ambulanceroid"
     Questo mostro non può essere Evocato tramite Evocazione Speciale se non tramite Evocazione per Fusione. Quando un mostro sul tuo Terreno viene distrutto in seguito ad una battaglia e mandato al Cimitero, puoi Evocare tramite Evocazione Speciale quel mostro in Posizione di Difesa. Puoi usare questo effetto solo una volta per turno.
