--- a/data/rush/yugipedia936568.yaml
+++ b/data/rush/yugipedia936568.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If a card is in a Field Zone, send 2 cards from your hand to the Graveyard, including a a Wyrm Type monster.
+    If a card is in a Field Zone, send 2 cards from your hand to the Graveyard, including a Wyrm Type monster.
   de:
   es:
   fr:
