--- a/data/cards/78387742.yaml
+++ b/data/cards/78387742.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Invoca mediante una Invocación Especial 1 monstruo de tu mano que incluya "HÉROE Elemental" en su nombre. Este turno, ese monstruo no puede atacar, y vuelve a la mano de su propietario durante la End Phase.
   fr: |-
-    Faites l'Invocation Spéciale d'1 monstre "HÉROS Élémentaire" depuis votre main. Ce tour, ce monstre ne peut pas attaquer, et il retourne dans la main de son propriétaire durant la End Phase.
+    Invoquez Spécialement 1 monstre "HÉROS Élémentaire" depuis votre main, mais il ne peut pas attaquer, et aussi, renvoyez-le à la main durant la End Phase.
   it: |-
     Evoca Specialmente 1 mostro "EROE Elementale" dalla tua mano. Quel mostro non può attaccare, e ritorna nella mano durante la End Phase.
   pt: |-
