--- a/data/cards/40619741.yaml
+++ b/data/cards/40619741.yaml
@@ -89,6 +89,12 @@ sets:
     rarities:
     - Common
     - Mosaic Rare
+  pt:
+  - set_number: BP02-PT097
+    set_name: 'Battle Pack 2: War of the Giants'
+    rarities:
+    - Common
+    - Mosaic Rare
   ja:
   - set_number: DT09-JP033
     set_name: Duel Terminal - Vylon Descends!!
