--- a/data/cards/53776969.yaml
+++ b/data/cards/53776969.yaml
@@ -50,6 +50,7 @@ link_arrows:
 atk: 500
 materials: 1 "Scareclaw" monster or 1 "Visas Starfrost"
 series:
+- Heart
 - Scareclaw
 images:
 - index: 1
