--- a/data/cards/38679204.yaml
+++ b/data/cards/38679204.yaml
@@ -88,6 +88,12 @@ sets:
     rarities:
     - Common
     - Mosaic Rare
+  pt:
+  - set_number: BP02-PT107
+    set_name: 'Battle Pack 2: War of the Giants'
+    rarities:
+    - Common
+    - Mosaic Rare
   ja:
   - set_number: DT11-JP021
     set_name: Duel Terminal - Judgment of Omega!!
