--- a/data/cards/67951831.yaml
+++ b/data/cards/67951831.yaml
@@ -34,6 +34,8 @@ text:
     选择自己场上表侧表示存在的1只名字带有「元素英雄」的怪兽发动。这个回合选择的怪兽的攻击力变成一半，在同1次的战斗阶段中可以作2次攻击。
 card_type: Spell
 property: Normal
+series:
+- Heart
 images:
 - index: 1
   image: HeroHeart-LCGX-EN-C-1E.png
