--- a/data/cards/05376159.yaml
+++ b/data/cards/05376159.yaml
@@ -89,6 +89,9 @@ sets:
     set_name: Eternity Code
     rarities:
     - Common
+  - set_number: SD46-JP035
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: ETCO-KR074
     set_name: Eternity Code
