--- a/data/cards/08559524.yaml
+++ b/data/cards/08559524.yaml
@@ -91,6 +91,9 @@ sets:
     set_name: Eternity Code
     rarities:
     - Common
+  - set_number: SD46-JP029
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: ETCO-KR062
     set_name: Eternity Code
