--- a/data/cards/12289247.yaml
+++ b/data/cards/12289247.yaml
@@ -134,6 +134,10 @@ sets:
     set_name: 'Structure Deck: Pendulum Evolution'
     rarities:
     - Super Rare
+  - set_number: 23TP-JP307
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: SD31-KR002
     set_name: 'Structure Deck: Pendulum Evolution'
