--- a/data/cards/34761841.yaml
+++ b/data/cards/34761841.yaml
@@ -95,6 +95,9 @@ sets:
     set_name: Eternity Code
     rarities:
     - Common
+  - set_number: SD46-JP008
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: ETCO-KR017
     set_name: Eternity Code
