--- a/data/cards/42052439.yaml
+++ b/data/cards/42052439.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: Collection Pack 2020
     rarities:
     - Rare
+  - set_number: 23TP-JP306
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: CP20-KR034
     set_name: Collection Pack 2020
