--- a/data/cards/44487250.yaml
+++ b/data/cards/44487250.yaml
@@ -92,6 +92,10 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Common
+  - set_number: 23TP-JP315
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: LTGY-KR072
     set_name: Lord of the Tachyon Galaxy
