--- a/data/cards/50078509.yaml
+++ b/data/cards/50078509.yaml
@@ -300,6 +300,9 @@ sets:
     set_name: 'Structure Deck: Ice Barrier of the Frozen Prison'
     rarities:
     - Common
+  - set_number: SD46-JP037
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: ABPF-KR064
     set_name: Absolute Powerforce
