--- a/data/cards/58092907.yaml
+++ b/data/cards/58092907.yaml
@@ -150,6 +150,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Ultra Rare
+  - set_number: 23TP-JP308
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: DP23-KR045
     set_name: 'Duelist Pack: Legend Duelist 6'
