--- a/data/cards/66141736.yaml
+++ b/data/cards/66141736.yaml
@@ -82,6 +82,9 @@ sets:
     set_name: 20th Rival Collection
     rarities:
     - Ultra Rare
+  - set_number: SD46-JPP04
+    set_name: 'Structure Deck: Pulse of the King Rumbling of Heaven and Earth Pack'
+    rarities:
   ko:
   - set_number: PP12-KR030
     set_name: Premium Pack Vol.12
