--- a/data/cards/68490573.yaml
+++ b/data/cards/68490573.yaml
@@ -72,6 +72,9 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Prismatic Secret Rare
+  - set_number: SD46-JP036
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: HC01-KR020
     set_name: History Archive Collection
