--- a/data/cards/62242678.yaml
+++ b/data/cards/62242678.yaml
@@ -131,6 +131,9 @@ sets:
     set_name: Dimension Box Limited Edition
     rarities:
     - Normal Parallel Rare
+  - set_number: SD46-JPP03
+    set_name: 'Structure Deck: Pulse of the King Rumbling of Heaven and Earth Pack'
+    rarities:
   ko:
   - set_number: SHVI-KR083
     set_name: Shining Victories
