--- a/data/cards/78275321.yaml
+++ b/data/cards/78275321.yaml
@@ -139,6 +139,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Common
+  - set_number: SD46-JP020
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: ABPF-KR020
     set_name: Absolute Powerforce
