--- a/data/cards/99585850.yaml
+++ b/data/cards/99585850.yaml
@@ -96,6 +96,9 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: SD46-JP044
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: LGB1-KR021
     set_name: Legendary Gold Set
