--- a/data/cards/04796100.yaml
+++ b/data/cards/04796100.yaml
@@ -175,6 +175,8 @@ sets:
   - set_number: AC03-JP030
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Collectors Rare
   ko:
   - set_number: SDMY-KR045
     set_name: 'Structure Deck: Yugi Muto'
