--- a/data/cards/10875327.yaml
+++ b/data/cards/10875327.yaml
@@ -128,6 +128,8 @@ sets:
   - set_number: AC03-JP038
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Collectors Rare
   ko:
   - set_number: RGBT-KR019
     set_name: Raging Battle
