--- a/data/cards/45716579.yaml
+++ b/data/cards/45716579.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 "Earthbound" monsters
-    If this card is Special Summoned: You can add 1 Field Spell from your Deck or GY to your hand. If a monster(s) is Special Summoned from your opponent's Extra Deck: You can destroy as many monsters your opponent controls as possible that were Special Summoned this turn, and if you do, inflict 800 damage to your opponent for each monster destroyed by this effect. You can only use each effect of "Earthbound Servant Geo Kraken" once per turn.
+    If this card is Special Summoned: You can add 1 Field Spell from your Deck or GY to your hand. If a monster(s) is Special Summoned from your opponent's Extra Deck (except during the Damage Step): You can destroy as many monsters your opponent controls as possible that were Special Summoned this turn, and if you do, inflict 800 damage to your opponent for each monster destroyed by this effect. You can only use each effect of "Earthbound Servant Geo Kraken" once per turn.
   de:
   es:
   fr:
