--- a/data/cards/01508649.yaml
+++ b/data/cards/01508649.yaml
@@ -130,6 +130,7 @@ sets:
   - set_number: AC03-JP057
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: EXFO-KR046
     set_name: Extreme Force
