--- a/data/cards/05818798.yaml
+++ b/data/cards/05818798.yaml
@@ -305,6 +305,7 @@ sets:
   - set_number: AC03-JP031
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: MRD-K124
     set_name: Metal Raiders
