--- a/data/cards/25533642.yaml
+++ b/data/cards/25533642.yaml
@@ -122,6 +122,8 @@ sets:
   - set_number: AC03-JP055
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: CIBR-KR014
     set_name: Circuit Break
