--- a/data/cards/25853045.yaml
+++ b/data/cards/25853045.yaml
@@ -109,6 +109,7 @@ sets:
   - set_number: AC03-JP044
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: DP15-KR019
     set_name: 'Duelist Pack: Kastle Siblings'
