--- a/data/cards/27541563.yaml
+++ b/data/cards/27541563.yaml
@@ -119,6 +119,8 @@ sets:
   - set_number: AC03-JP059
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: CIBR-KR071
     set_name: Circuit Break
