--- a/data/cards/53855409.yaml
+++ b/data/cards/53855409.yaml
@@ -44,7 +44,7 @@ series:
 images:
 - index: 1
   image: Doppelwarrior-21TP-JP-SR.png
-  illustration: Doppelwarrior-TF06-JP-VG.png
+  illustration: Doppelwarrior-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: Doppelwarrior-GFP2-EN-UR-1E.png
   illustration: Doppelwarrior-MADU-EN-VG-artwork.png
@@ -174,6 +174,8 @@ sets:
   - set_number: AC03-JP033
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: STOR-KR002
     set_name: Storm of Ragnarok
