--- a/data/cards/67987302.yaml
+++ b/data/cards/67987302.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Monstros "Imortal Terrestre" não podem ser destruídos por seus próprios efeitos.
   ja: |-
-    このカードがフィールド上に表側表示で存在する限り、「地縛神」と名のついたモンスターは自身の効果では破壊されない。
+    ①：このカードがモンスターゾーンに存在する限り、「地縛神」モンスターは自身の効果では破壊されない。
   ko: |-
     이 카드가 필드 위에 앞면 표시로 존재하는 한, "지박신"이라는 이름이 붙은 몬스터는 자신의 효과로는 파괴되지 않는다.
   zh-TW:
@@ -114,6 +114,7 @@ sets:
   - set_number: AC03-JP039
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: EXP3-KR039
     set_name: Extra Pack Volume 3
