--- a/data/cards/77207191.yaml
+++ b/data/cards/77207191.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal ou Virar: você pode adicionar 1 "Gazelle, o Rei das Bestas Místicas" do seu Deck à sua mão.
   ja: |-
-    ①：このカードが召喚・反転召喚に成功した時に発動できる。デッキから「幻獣王ガゼル」１体を手札に加える。
+    ①：このカードが召喚・反転召喚した時に発動できる。デッキから「幻獣王ガゼル」１体を手札に加える。
   ko: |-
     ①: 이 카드가 일반 소환 / 반전 소환에 성공했을 때에 발동할 수 있다. 덱에서 "환상수왕 가젤" 1장을 패에 넣는다.
   zh-TW:
@@ -158,6 +158,7 @@ sets:
   - set_number: AC03-JP032
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: SDMY-KR018
     set_name: 'Structure Deck: Yugi Muto'
