--- a/data/cards/04796100.yaml
+++ b/data/cards/04796100.yaml
@@ -40,7 +40,7 @@ text:
     Quando este card for destruído: você pode escolher 1 "Berfomet" ou 1 "Gazelle, o Rei das Bestas Místicas" no seu Cemitério; Invoque o alvo por Invocação-Especial.
   ja: |-
     「幻獣王ガゼル」＋「バフォメット」
-    ①：このカードが破壊された時、自分の墓地の、「バフォメット」または「幻獣王ガゼル」１体を対象として発動できる。そのモンスターを特殊召喚する。
+    ①：このカードが破壊された時、自分の墓地の、「幻獣王ガゼル」か「バフォメット」１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
     "환상수왕 가젤" ＋ "바포메트"
     ①: 이 카드가 파괴되었을 때, 자신 묘지의, "바포메트" 또는 "환상수왕 가젤" 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
