--- a/data/cards/09742784.yaml
+++ b/data/cards/09742784.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 싱크로 소재로서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "정크" 몬스터 1장을 패에 넣는다. ②: 이 카드가 묘지에 존재할 경우, 패를 1장 묘지로 보내고 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合1次，仅可使用其中1个。①：此卡作为同步素材被送至墓地的情况下可以发动。从牌组将1只"废品"怪兽加入手牌。②：此卡存在于墓地的情况下，将1张手牌送至墓地可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡离开场上的情况下，将其除外。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：此卡作为同步素材被送至墓地的情况下可以发动。从牌组将1只“废品”怪兽加入手牌。②：此卡存在于墓地的情况下，将1张手牌送至墓地可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡离开场上的情况下，将其除外。
 card_type: Monster
 monster_type_line: Machine / Tuner / Effect
 attribute: FIRE
@@ -128,6 +128,8 @@ sets:
   - set_number: AC03-JP034
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: SD28-KR001
     set_name: 'Structure Deck: Synchron Extreme'
