--- a/data/cards/10875327.yaml
+++ b/data/cards/10875327.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Só pode haver 1 monstro "Imortal Terrestre" no campo. Se não houver Magias de Campo com a face para cima no campo, destrua este card. Os monstros do seu oponente não podem escolher este card como alvo de ataques. Este card pode atacar diretamente seu oponente. Se este card com a face para cima deixar o campo, exceto por seu próprio efeito: destrua tantos monstros com a face para cima que seu oponente controla quanto possível e, se isso acontecer, cause 800 de dano ao seu oponente para cada monstro destruído.
   ja: |-
-    「地縛神」と名のついたモンスターはフィールド上に１体しか表側表示で存在できない。フィールド上に表側表示でフィールド魔法カードが存在しない場合このカードを破壊する。相手はこのカードを攻撃対象に選択する事はできない。このカードは相手プレイヤーに直接攻撃する事ができる。このカードの効果以外でこのカードがフィールド上から離れた時､相手フィールド上に表側表示で存在するモンスターを全て破壊し､破壊したモンスター１体につき８００ポイントダメージを相手ライフに与える｡
+    ①：「地縛神」モンスターはフィールドに１体しか表側表示で存在できない。②：このカードは直接攻撃できる。③：相手モンスターはこのカードを攻撃対象に選択できない。④：フィールド魔法カードが表側表示で存在しない場合にこのカードは破壊される。⑤：表側表示のこのカードが、このカードの効果以外の方法でフィールドから離れた場合に発動する。相手フィールドの表側表示モンスターを全て破壊し、破壊した数×８００ダメージを相手に与える。
   ko: |-
     "지박신"이라는 이름이 붙은 몬스터는 필드 위에 1장밖에 앞면 표시로 존재할 수 없다. 필드 위에 앞면 표시로 필드 마법 카드가 존재하지 않을 경우 이 카드를 파괴한다. 상대는 이 카드를 공격 대상으로 선택할 수 없다. 이 카드는 상대 플레이어에게 직접 공격할 수 있다. 이 카드의 효과 이외의 방법으로 이 카드가 필드 위에서 벗어났을 때, 상대 필드 위에 앞면 표시로 존재하는 몬스터를 전부 파괴하고, 파괴한 몬스터 1장당 800 포인트 데미지를 상대 라이프에 준다.
   zh-TW:
