--- a/data/cards/22211622.yaml
+++ b/data/cards/22211622.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno: você pode escolher 1 outro card com a face para cima que você controla; destrua tanto ele quanto este card e, se isso acontecer, Invoque por invocação-Especial 1 Monstro Pêndulo ou Xyz do Tipo Dragão do seu Deck Adicional, mas seu ATK e DEF se tornam 0, ele tem seus efeitos negados e, além disso, ele não pode ser usado como uma Matéria para uma Invocação-Sincro ou Xyz. Se este card na Zona de Monstros for destruído em batalha ou por um efeito de card: você pode colocar este card na sua Zona de Pêndulo.
   ja: |-
-    ①：１ターンに１度、このカード以外の自分フィールドの表側表示のカード１枚を対象として発動できる。そのカードとこのカードを破壊し、ドラゴン族のＸモンスターまたはドラゴン族のＰモンスター１体をエクストラデッキから特殊召喚する。この効果で特殊召喚したモンスターの攻撃力・守備力は０になり、効果は無効化され、Ｓ・Ｘ召喚の素材にできない。②：モンスターゾーンのこのカードが戦闘・効果で破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
+    ①：１ターンに１度、このカード以外の自分フィールドの表側表示カード１枚を対象として発動できる。そのカードとこのカードを破壊し、ドラゴン族のＸモンスターまたはドラゴン族のＰモンスター１体をＥＸデッキから特殊召喚する。この効果で特殊召喚したモンスターの攻撃力・守備力は０になり、効果は無効化され、Ｓ・Ｘ召喚の素材にできない。②：モンスターゾーンのこのカードが戦闘・効果で破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko: |-
     ①: 1턴에 1번, 이 카드 이외의 자신 필드의 앞면 표시 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드와 이 카드를 파괴하고, 드래곤족 엑시즈 몬스터 또는 드래곤족 펜듈럼 몬스터 1장을 엑스트라 덱에서 특수 소환한다. 이 효과로 특수 소환한 몬스터의 공격력 / 수비력은 0 이 되고, 효과는 무효화되며, 싱크로 / 엑시즈 소환의 소재로 할 수 없다. ②: 몬스터 존의 이 카드가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
   zh-TW:
@@ -100,6 +100,7 @@ sets:
   - set_number: AC03-JP046
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: MACR-KR018
     set_name: Maximum Crisis
