--- a/data/cards/23442438.yaml
+++ b/data/cards/23442438.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Seu oponente não pode ativar cards ou efeitos em resposta às ativações dos efeitos dos seus Monstros Sincro com "Guerreiro(a)", "Sincron" ou "Poeira Estelar" em seus nomes originais. Se você Invocar por Invocação-Sincro um Monstro Sincro "Guerreiro(a)", "Sincron" ou "Poeira Estelar": você pode escolher 1 monstro no seu Cemitério usado como matéria para ele; Invoque-o por Invocação-Especial em Posição de Defesa. Você só pode usar este efeito de "Perseguição Sincro" uma vez por turno.
   ja: |-
-    このカード名の①の効果は１ターンに１度しか使用できない。①：自分が「ウォリアー」、「シンクロン」、「スターダスト」ＳモンスターのＳ召喚に成功した場合、そのＳ召喚の素材とした自分の墓地のモンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。②：このカードが魔法＆罠ゾーンに存在する限り、元々のカード名に「ウォリアー」、「シンクロン」、「スターダスト」の内、いずれかを含む自分のＳモンスターの効果の発動に対して相手は魔法・罠・モンスターの効果を発動できない。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：自分が「ウォリアー」、「シンクロン」、「スターダスト」ＳモンスターをＳ召喚した場合、そのＳ召喚の素材とした自分の墓地のモンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。②：このカードが魔法＆罠ゾーンに存在する限り、元々のカード名に「ウォリアー」、「シンクロン」、「スターダスト」の内、いずれかを含む自分のＳモンスターの効果の発動に対して相手は魔法・罠・モンスターの効果を発動できない。
   ko: |-
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신이 "워리어", "싱크론", "스타더스트" 싱크로 몬스터의 싱크로 소환에 성공했을 경우, 그 싱크로 소환의 소재로 한 자신 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다. ②: 이 카드가 마법 & 함정 존에 존재하는 한, 원래의 카드명에 "워리어", "싱크론", "스타더스트" 중, 어느 것을 포함하는 자신의 싱크로 몬스터의 효과 발동에 대하여 상대는 마법 / 함정 / 몬스터의 효과를 발동할 수 없다.
   zh-TW:
@@ -96,6 +96,7 @@ sets:
   - set_number: AC03-JP037
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: DP23-KR026
     set_name: 'Duelist Pack: Legend Duelist 6'
