--- a/data/cards/32441317.yaml
+++ b/data/cards/32441317.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Escolha 1 Monstro Sincro no campo; devolva o alvo para o Deck Adicional e, depois, se todos os monstros que foram usados para a Invocação-Sincro desse monstro estiverem no seu Cemitério, você pode Invocar todos eles por Invocação-Especial.
   ja: |-
-    ①：フィールドのＳモンスター１体を対象として発動できる。そのＳモンスターを持ち主のＥＸデッキに戻す。その後、ＥＸデッキに戻したそのモンスターのＳ召喚に使用したＳ素材モンスター一組が自分の墓地に揃っていれば、その一組を自分フィールドに特殊召喚できる。
+    ①：フィールドのＳモンスター１体を対象として発動できる。そのＳモンスターをＥＸデッキに戻す。その後、ＥＸデッキに戻したそのモンスターのＳ召喚の素材としたモンスター一組が自分の墓地に揃っていれば、その一組を特殊召喚できる。
   ko: |-
     ①: 필드의 싱크로 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 싱크로 몬스터를 주인의 엑스트라 덱으로 되돌린다. 그 후, 엑스트라 덱으로 되돌린 그 몬스터의 싱크로 소환에 사용한 싱크로 소재 몬스터 1세트가 자신 묘지에 모여 있으면, 그 1세트를 자신 필드에 특수 소환할 수 있다.
   zh-TW:
@@ -147,6 +147,7 @@ sets:
   - set_number: AC03-JP036
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: TDGS-KR049
     set_name: The Duelist Genesis
