--- a/data/cards/42160203.yaml
+++ b/data/cards/42160203.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por turno, antes do cálculo de dano, se este card batalhar um monstro do oponente: você pode desassociar 1 matéria deste card; até o final deste turno, mude para 0 o ATK desse monstro com a face para cima do oponente e, se isso acontecer, este card ganha ATK igual ao ATK original desse monstro do oponente. Durante a Fase de Batalha (Efeito Rápido): você pode devolver este card para o Deck Adicional; Invoque por Invocação-Especial até 2 Monstros Pêndulo "Rei Supremo Dragão" e/ou "Rei Supremo Portal" com a face para cima no seu Deck Adicional, em Posição de Defesa.
   ja: |-
     闇属性レベル４のＰモンスター×２
-    ①：１ターンに１度、このカードが相手モンスターと戦闘を行うダメージ計算前に、このカードのＸ素材を１つ取り除いて発動できる。ターン終了時まで、その相手モンスターの攻撃力を０にし、その元々の攻撃力分このカードの攻撃力をアップする。②：自分・相手のバトルフェイズにこのカードをＥＸデッキに戻して発動できる。自分のＥＸデッキの表側表示のＰモンスターの中から、「覇王眷竜」モンスターまたは「覇王門」モンスターを合計２体まで選んで守備表示で特殊召喚する。
+    ①：１ターンに１度、このカードが相手モンスターと戦闘を行うダメージ計算前に、このカードのＸ素材を１つ取り除いて発動できる。ターン終了時まで、その相手モンスターの攻撃力を０にし、その元々の攻撃力分このカードの攻撃力をアップする。②：自分・相手のバトルフェイズに、このカードをＥＸデッキに戻して発動できる。自分のＥＸデッキ（表側）から「覇王眷竜」Ｐモンスターか「覇王門」Ｐモンスターを合計２体まで守備表示で特殊召喚する。
   ko: |-
     어둠 속성 레벨 4 의 펜듈럼 몬스터 × 2
     ①: 1턴에 1번, 이 카드가 상대 몬스터와 전투를 실행하는 데미지 계산 전에, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 턴 종료시까지, 그 상대 몬스터의 공격력을 0 으로 하고, 그 원래 공격력만큼 이 카드의 공격력을 올린다. ②: 자신 / 상대의 배틀 페이즈에 이 카드를 엑스트라 덱으로 되돌리고 발동할 수 있다. 자신 엑스트라 덱의 앞면 표시 펜듈럼 몬스터 중에서, "패왕권룡" 몬스터 또는 "패왕문" 몬스터를 합계 2장까지 고르고 수비 표시로 특수 소환한다.
@@ -110,6 +110,7 @@ sets:
   - set_number: AC03-JP051
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: COTD-KR041
     set_name: Code of the Duelist
