--- a/data/cards/42790071.yaml
+++ b/data/cards/42790071.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se você ativar um Card de Armadilha (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial da sua mão. Se este card for Invocado por Invocação-Especial: você pode Invocar por Invocação-Especial 1 monstro "Altergeist" do seu Deck em Posição de Defesa, exceto "Multifalsificador Altergeist". Você não pode Invocar monstros por Invocação-Especial no turno em que ativar este efeito, exceto monstros "Altergeist". Você só pode usar cada efeito de "Multifalsificador Altergeist" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分が罠カードを発動した場合に発動できる。このカードを手札から特殊召喚する。②：このカードが特殊召喚に成功した場合に発動できる。デッキから「オルターガイスト・マルチフェイカー」以外の「オルターガイスト」モンスター１体を守備表示で特殊召喚する。この効果を発動するターン、自分は「オルターガイスト」モンスターしか特殊召喚できない。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分が罠カードを発動した場合に発動できる。このカードを手札から特殊召喚する。②：このカードが特殊召喚した場合に発動できる（この効果を発動するターン、自分は「オルターガイスト」モンスターしか特殊召喚できない）。デッキから「オルターガイスト・マルチフェイカー」以外の「オルターガイスト」モンスター１体を守備表示で特殊召喚する。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신이 함정 카드를 발동했을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "얼터가이스트 멀티페이커" 이외의 "얼터가이스트" 몬스터 1장을 수비 표시로 특수 소환한다. 이 효과를 발동하는 턴에, 자신은 "얼터가이스트" 몬스터밖에 특수 소환할 수 없다.
   zh-TW:
@@ -119,6 +119,7 @@ sets:
   - set_number: AC03-JP056
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: FLOD-KR014
     set_name: Flames of Destruction
