--- a/data/cards/43387895.yaml
+++ b/data/cards/43387895.yaml
@@ -34,7 +34,7 @@ text:
     Deve ser Invocado por Invocação-Fusão, ou Invocado por Invocação-Especial ao oferecer como Tributo os cards acima que você controla (e nesse caso, você não usa "Polimerização"). Uma vez por turno: você pode escolher 1 outro monstro no campo ou no Cemitério; até a Fase Final, o nome deste card se torna o nome original desse monstro e troque este efeito pelos efeitos originais desse monstro e, além disso, pelo resto deste turno, se um monstro seu atacar um monstro em Posição de Defesa, cause dano de batalha perfurante ao seu oponente.
   ja: |-
     闇属性Ｐモンスター×２
-    このカードは融合召喚及び以下の方法でのみ特殊召喚できる。●自分フィールドの上記カードをリリースした場合にＥＸデッキから特殊召喚できる（「融合」は必要としない）。①：１ターンに１度、このカード以外の自分または相手のフィールド・墓地のモンスター１体を対象として発動できる。エンドフェイズまで、このカードはそのモンスターと同じ、元々のカード名・効果を得る。このターン、自分のモンスターが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。
+    このカードは融合召喚及び以下の方法でのみ特殊召喚できる。●自分フィールドの上記のカードをリリースした場合にＥＸデッキから特殊召喚できる。①：１ターンに１度、このカード以外の、自分か相手のフィールド・墓地のモンスター１体を対象として発動できる。このカードはエンドフェイズまで、そのモンスターの元々のカード名・効果と同じカード名・効果を得る。このターン、自分のモンスターが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。
   ko: |-
     어둠 속성 펜듈럼 몬스터 × 2
     이 카드는 융합 소환 및 이하의 방법으로만 특수 소환할 수 있다.
@@ -116,6 +116,8 @@ sets:
   - set_number: AC03-JP049
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: COTD-KR038
     set_name: Code of the Duelist
