--- a/data/cards/57458399.yaml
+++ b/data/cards/57458399.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Se um ou mais monstros forem Invocados por Invocação-Especial do seu Cemitério (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial da sua mão. Se você tiver um Monstro Sincro com "Guerreiro(a)", "Sincron" ou "Poeira Estelar" em seu nome original no seu campo ou Cemitério: você pode fazer com que o Nível deste card se torne 4 até o final deste turno. Você só pode usar cada efeito de "Sincron Satélite" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地からモンスターが特殊召喚された場合に発動できる。このカードを手札から特殊召喚する。②：元々のカード名に「ウォリアー」、「シンクロン」、「スターダスト」の内、いずれかを含むＳモンスターが自分のフィールド・墓地に存在する場合に発動できる。このカードのレベルはターン終了時まで４になる。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地からモンスターが特殊召喚された場合に発動できる。このカードを手札から特殊召喚する。②：元々のカード名に「ウォリアー」、「シンクロン」、「スターダスト」の内、いずれかを含むＳモンスターが自分のフィールドか墓地に存在する場合に発動できる。このカードのレベルはターン終了時まで４になる。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에서 몬스터가 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 원래의 카드명에 "워리어", "싱크론", "스타더스트" 중, 어느 것을 포함하는 싱크로 몬스터가 자신의 필드 / 묘지에 존재할 경우에 발동할 수 있다. 이 카드의 레벨은 턴 종료시까지 4 가 된다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：怪兽从自己的墓地被特殊召唤的情况下可以发动。从手牌将此卡特殊召唤。②：原本卡名包含"战士"、"同步士"、"星尘"中任一的同步怪兽存在于自己的场上・墓地的情况下可以发动。此卡的等级直至回合结束时为止变为4。
+    此卡名的①②效果1回合仅可各使用1次。①：怪兽从自己的墓地被特殊召唤的情况下可以发动。从手牌将此卡特殊召唤。②：原本卡名包含“战士”、“同步士”、“星尘”中任一的同步怪兽存在于自己的场上・墓地的情况下可以发动。此卡的等级直至回合结束时为止变为4。
 card_type: Monster
 monster_type_line: Machine / Tuner / Effect
 attribute: DARK
@@ -99,6 +99,7 @@ sets:
   - set_number: AC03-JP035
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: DP23-KR025
     set_name: 'Duelist Pack: Legend Duelist 6'
