--- a/data/cards/69610326.yaml
+++ b/data/cards/69610326.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 Monstro Pêndulo "Rei Supremo Portal" do seu Deck à sua mão. Se este card estiver no seu Cemitério e você não controlar nenhum monstro: você pode Invocar este card por Invocação-Especial. Você só pode usar cada efeito de monstro de "Rei Supremo Dragão Wurmescuro" uma vez por turno.
   ja: |-
-    このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「覇王門」Ｐモンスター１体を手札に加える。②：このカードが墓地に存在し、自分フィールドにモンスターが存在しない場合に発動できる。このカードを特殊召喚する。
+    このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから「覇王門」Ｐモンスター１体を手札に加える。②：このカードが墓地に存在し、自分フィールドにモンスターが存在しない場合に発動できる。このカードを特殊召喚する。
   ko: |-
     이 카드명의 ①②의 몬스터 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "패왕문" 펜듈럼 몬스터 1장을 패에 넣는다. ②: 이 카드가 묘지에 존재하고, 자신 필드에 몬스터가 존재하지 않을 경우에 발동할 수 있다. 이 카드를 특수 소환한다.
   zh-TW:
@@ -54,7 +54,7 @@ pendulum_effect:
   pt: |-
     Uma vez por turno, se você não controlar nenhum monstro: você pode colocar 1 Monstro Pêndulo "Rei Supremo Portal" do seu Deck na sua Zona de Pêndulo e, além disso, você não pode Invocar monstros por Invocação-Pêndulo pelo resto deste turno, exceto monstros de TREVAS.
   ja: |-
-    ①：１ターンに１度、自分フィールドにモンスターが存在しない場合に発動できる。デッキから「覇王門」Ｐモンスター１体を選んで自分のＰゾーンに置く。この効果の発動後、ターン終了時まで自分は闇属性モンスターしかＰ召喚できない。
+    ①：１ターンに１度、自分フィールドにモンスターが存在しない場合に発動できる。デッキから「覇王門」Ｐモンスター１体を自分のＰゾーンに置く。この効果の発動後、ターン終了時まで自分は闇属性モンスターしかＰ召喚できない。
   ko: |-
     ①: 1턴에 1번, 자신 필드에 몬스터가 존재하지 않을 경우에 발동할 수 있다. 덱에서 "패왕문" 펜듈럼 몬스터 1장을 고르고 자신의 펜듈럼 존에 놓는다. 이 효과의 발동 후, 턴 종료시까지 자신은 어둠 속성 몬스터밖에 펜듈럼 소환할 수 없다.
   zh-TW:
@@ -131,6 +131,7 @@ sets:
   - set_number: AC03-JP047
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: MACR-KR019
     set_name: Maximum Crisis
