--- a/data/cards/70771599.yaml
+++ b/data/cards/70771599.yaml
@@ -34,7 +34,7 @@ text:
     Se este card for Invocado por Invocação-Sincro: você pode destruir todos os monstros com a face para cima que seu oponente controla. Uma vez por turno, antes do cálculo de dano, se este card batalhar um monstro do oponente: você pode destruir esse monstro e, se isso acontecer, cause dano ao seu oponente igual ao ATK original do monstro destruído. Se este card estiver no seu Cemitério: você pode oferecer como Tributo 2 monstros "Rei Supremo Dragão"; Invoque este card por Invocação-Especial.
   ja: |-
     チューナー＋チューナー以外の闇属性Ｐモンスター１体以上
-    ①：このカードがＳ召喚に成功した場合に発動できる。相手フィールドの表側表示モンスターを全て破壊する。②：１ターンに１度、このカードが相手モンスターと戦闘を行うダメージ計算前に発動できる。そのモンスターを破壊し、破壊したモンスターの元々の攻撃力分のダメージを相手に与える。③：このカードが墓地に存在する場合、自分フィールドの「覇王眷竜」モンスター２体をリリースして発動できる。このカードを墓地から特殊召喚する。
+    ①：このカードがＳ召喚した場合に発動できる。相手フィールドの表側表示モンスターを全て破壊する。②：１ターンに１度、このカードが相手モンスターと戦闘を行うダメージ計算前に発動できる。そのモンスターを破壊し、破壊したモンスターの元々の攻撃力分のダメージを相手に与える。③：このカードが墓地に存在する場合、自分フィールドの「覇王眷竜」モンスター２体をリリースして発動できる。このカードを特殊召喚する。
   ko: |-
     튜너 ＋ 튜너 이외의 어둠 속성 펜듈럼 몬스터 1장 이상
     ①: 이 카드가 싱크로 소환에 성공했을 경우에 발동할 수 있다. 상대 필드의 앞면 표시 몬스터를 전부 파괴한다. ②: 1턴에 1번, 이 카드가 상대 몬스터와 전투를 실행하는 데미지 계산 전에 발동할 수 있다. 그 몬스터를 파괴하고, 파괴한 몬스터의 원래 공격력만큼의 데미지를 상대에게 준다. ③: 이 카드가 묘지에 존재할 경우, 자신 필드의 "패왕권룡" 몬스터 2장을 릴리스하고 발동할 수 있다. 이 카드를 묘지에서 특수 소환한다.
@@ -110,6 +110,8 @@ sets:
   - set_number: AC03-JP050
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: COTD-KR039
     set_name: Code of the Duelist
