--- a/data/cards/89538537.yaml
+++ b/data/cards/89538537.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     (Efeito Rápido): você pode devolver 1 outro card "Altergeist" que você controla para a mão e, depois, escolha 1 card que seu oponente controla; devolva-o para a mão. Se este card for enviado do campo para o Cemitério: você pode escolher 1 Armadilha "Altergeist" no seu Cemitério; adicione esse card à sua mão. Você só pode usar cada efeito de "Sedabíquo Altergeist" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカード以外の自分フィールドの「オルターガイスト」カード１枚を持ち主の手札に戻し、相手フィールドのカード１枚を対象として発動できる。そのカードを持ち主の手札に戻す。この効果は相手ターンでも発動できる。②：このカードがフィールドから墓地へ送られた場合、自分の墓地の「オルターガイスト」罠カード１枚を対象として発動できる。そのカードを手札に加える。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手ターンに、自分フィールドの他の「オルターガイスト」カード１枚を手札に戻し、相手フィールドのカード１枚を対象として発動できる。そのカードを手札に戻す。②：このカードがフィールドから墓地へ送られた場合、自分の墓地の「オルターガイスト」罠カード１枚を対象として発動できる。そのカードを手札に加える。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드 이외의 자신 필드의 "얼터가이스트" 카드 1장을 주인의 패로 되돌리고, 상대 필드의 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 주인의 패로 되돌린다. 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 필드에서 묘지로 보내졌을 경우, 자신 묘지의 "얼터가이스트" 함정 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
@@ -143,6 +143,8 @@ sets:
   - set_number: AC03-JP054
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: CIBR-KR013
     set_name: Circuit Break
