--- a/data/cards/95453143.yaml
+++ b/data/cards/95453143.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por turno, você pode banir 1 Monstro de Efeito de TREVAS de Nível 6 ou menos do seu Cemitério; até a Fase Final, o nome deste card se torna o do monstro banido e troque este efeito pelos efeitos originais do monstro banido. Se este card for destruído e enviado para o Cemitério: adicione 1 monstro "Imortal Terrestre" do seu Deck à sua mão.
   ja: |-
     闇属性チューナー＋チューナー以外の悪魔族モンスター１体以上
-    ①：１ターンに１度、自分の墓地からレベル６以下の闇属性の効果モンスター１体を除外して発動できる。エンドフェイズまで、このカードはそのモンスターと同じ、元々のカード名・効果を得る。②：このカードが破壊され墓地へ送られた場合に発動する。デッキから「地縛神」モンスター１体を手札に加える。
+    ①：１ターンに１度、自分の墓地からレベル６以下の闇属性の効果モンスター１体を除外して発動できる。このカードはエンドフェイズまで、そのモンスターの元々のカード名・効果と同じカード名・効果を得る。②：このカードが破壊され墓地へ送られた場合に発動する。デッキから「地縛神」モンスター１体を手札に加える。
   ko: |-
     어둠 속성 튜너 ＋ 튜너 이외의 악마족 몬스터 1장 이상
     1턴에 1번, 자신의 묘지에 존재하는 레벨 6 이하의 어둠 속성의 효과 몬스터 1장을 게임에서 제외하고 발동할 수 있다. 이 카드는 이 턴의 엔드 페이즈시까지, 이 효과를 발동하기 위해 게임에서 제외한 효과 몬스터와 같은 이름의 카드로 취급하고, 같은 효과를 얻는다. 또한, 이 카드가 파괴되어 묘지로 보내졌을 때, 자신의 덱에서부터 "지박신"이라는 이름이 붙은 몬스터 1장을 패에 넣는다.
@@ -106,10 +106,12 @@ sets:
   - set_number: 20TP-JP308
     set_name: Tournament Pack 2020 Vol.3
     rarities:
-    - C
+    - Common
   - set_number: AC03-JP041
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
+    - Secret Rare
   ko:
   - set_number: PP06-KR015
     set_name: Premium Pack Vol.6
