--- a/data/cards/96733134.yaml
+++ b/data/cards/96733134.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode oferecer como Tributo 2 monstros "Rei Supremo Dragão"; Invoque este card por Invocação-Especial da sua mão. Se um Monstro Pêndulo seu batalhar um monstro do oponente, qualquer dano de batalha que ele causar ao seu oponente é dobrado. Durante a Fase de Batalha (Efeito Rápido): você pode oferecer este card como Tributo; Invoque por Invocação-Especial até 2 Monstros Pêndulo "Rei Supremo Dragão" e/ou "Rei Supremo Portal" com a face para cima no seu Deck Adicional, em Posição de Defesa, exceto "Rei Supremo Dragão de Olhos Anômalos".
   ja: |-
-    ①：自分フィールドの「覇王眷竜」モンスター２体をリリースして発動できる。このカードを手札から特殊召喚する。②：自分のＰモンスターが相手モンスターと戦闘を行う場合、相手に与える戦闘ダメージは倍になる。③：自分・相手のバトルフェイズにこのカードをリリースして発動できる。自分のＥＸデッキの表側表示のＰモンスターの中から、「覇王眷竜オッドアイズ」以外の「覇王眷竜」モンスターまたは「覇王門」モンスターを合計２体まで選んで守備表示で特殊召喚する。
+    ①：自分フィールドの「覇王眷竜」モンスター２体をリリースして発動できる。このカードを手札から特殊召喚する。②：自分のＰモンスターが相手モンスターと戦闘を行う場合、相手に与える戦闘ダメージは倍になる。③：自分・相手のバトルフェイズにこのカードをリリースして発動できる。自分のＥＸデッキ（表側）から「覇王眷竜オッドアイズ」以外の「覇王眷竜」Ｐモンスターか「覇王門」Ｐモンスターを合計２体まで守備表示で特殊召喚する。
   ko: |-
     ①: 자신 필드의 "패왕권룡" 몬스터 2장을 릴리스하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신의 펜듈럼 몬스터가 상대 몬스터와 전투를 실행할 경우, 상대에게 주는 전투 데미지는 배가 된다. ③: 자신 / 상대의 배틀 페이즈에 이 카드를 릴리스하고 발동할 수 있다. 자신 엑스트라 덱의 앞면 표시 펜듈럼 몬스터 중에서, "패왕권룡 오드아이즈" 이외의 "패왕권룡" 몬스터 또는 "패왕문" 몬스터를 합계 2장까지 고르고 수비 표시로 특수 소환한다.
   zh-TW:
@@ -121,6 +121,7 @@ sets:
   - set_number: AC03-JP048
     set_name: Animation Chronicle 2023
     rarities:
+    - Common
   ko:
   - set_number: COTD-KR015
     set_name: Code of the Duelist
