--- a/data/cards/25853045.yaml
+++ b/data/cards/25853045.yaml
@@ -8,7 +8,7 @@ name:
   it: Lanciere Raggio Nero Armatura Completa
   pt: Lanceiro do Raio Negro de Armadura Completa
   ja: <ruby>ＦＡ<rt>フルアーマード</rt></ruby>－ブラック・レイ・ランサー
-  ja_romaji: Furu Āmādo - Burakku Rei Ransā
+  ja_romaji: Furuāmādo - Burakku Rei Ransā
   ko: <ruby>FA<rt>풀아머드</rt></ruby>－블랙 레이 랜서
   ko_rr: Pul-ameodeu - Beullaek Rei Raenseo
   zh-TW:
