--- a/data/cards/99469936.yaml
+++ b/data/cards/99469936.yaml
@@ -8,7 +8,7 @@ name:
   it: Lanciere Crystalzero Armatura Completa
   pt: Lanceiro Cristalzero de Armadura Completa
   ja: <ruby>ＦＡ<rt>フルアーマード</rt></ruby>－クリスタル・ゼロ・ランサー
-  ja_romaji: Furu Āmādo - Kurisutaru Zero Ransā
+  ja_romaji: Furuāmādo - Kurisutaru Zero Ransā
   ko: <ruby>FA<rt>풀아머드</rt></ruby>－크리스탈 제로 랜서
   ko_rr:
   zh-TW:
