--- a/data/cards/08690387.yaml
+++ b/data/cards/08690387.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>戒<rt>かい</rt></ruby><ruby>隷<rt>れい</rt></ruby> ジオグレムリン
-  ja_romaji: Jibakukairei Jio Guremurin
+  ja_romaji: Jibakukairei Jioguremurin
   ko:
   ko_rr:
   zh-TW:
