--- a/data/rush/16147.yaml
+++ b/data/rush/16147.yaml
@@ -62,6 +62,9 @@ images:
   illustration: ConstructorWyrmBuildragon-DBR-JP-VG-artwork.png
 - index: 2
   image: ConstructorWyrmBuildragon-RDBD03-JP-UPR.png
+  illustration: ConstructorWyrmBuildragon-DBR-JP-VG-artwork-2.png
+- index: 3
+  image: ConstructorWyrmBuildragon-RDTB01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP04-JP024
@@ -84,6 +87,11 @@ sets:
     set_name: Secret Ace Pack 2022 Vol.1
     rarities:
     - Secret Rare
+  - set_number: RD/TB01-JP007
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+    - Over Rush Rare
   ko:
   - set_number: RD/KP04-KR024
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
