--- a/data/cards/43797906.yaml
+++ b/data/cards/43797906.yaml
@@ -107,7 +107,7 @@ sets:
     set_name: Force of the Breaker
     rarities:
     - Rare
-  - set_number: SD23-JP013
+  - set_number: SD23-KR013
     set_name: 'Structure Deck: Roar of the Sea Emperor'
     rarities:
     - Common
